[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-ar/strings.xml
+++ b/owncloudApp/src/main/res/values-ar/strings.xml
@@ -101,7 +101,7 @@
   <string name="file_list_seconds_ago">منذ ثوانٍ</string>
   <string name="file_list_empty">لا شيء هنا. تحميل شيء ما!</string>
   <string name="file_list_empty_available_offline">لا يوجد ملفات متوفرة دون اتصال بالإنترنت.</string>
-  <string name="file_list_loading">جار التحميل…</string>
+  <string name="file_list_loading">جار التحميل...</string>
   <string name="file_list_no_app_for_file_type">لم يتم العثور على أي تطبيق مناسب لنوع الملف</string>
   <string name="local_file_list_empty">لا توجد ملفات في هذا المجلد.</string>
   <string name="local_file_list_empty_just_folders">لا يوجد أي مجلدات في هذا المجلد.</string>
@@ -131,9 +131,8 @@
   <string name="common_back">رجوع إلى الخلف</string>
   <string name="common_save_exit">حفظ وخروج</string>
   <string name="common_error">خطأ</string>
-  <string name="common_loading">جار التحميل…</string>
+  <string name="common_loading">جار التحميل...</string>
   <string name="common_unknown">غير معروف</string>
-  <string name="common_error_unknown">خطأ غير معروف</string>
   <string name="common_pending">قيد الانتظار</string>
   <string name="common_important">مهم</string>
   <string name="about_title">عن</string>
@@ -142,7 +141,7 @@
   <string name="create_account">إنشاء حساب</string>
   <string name="upload_chooser_title">تحميل من</string>
   <string name="uploader_info_dirname">اسم المجلد</string>
-  <string name="uploader_upload_in_progress_ticker">جار التحميل…</string>
+  <string name="uploader_upload_in_progress_ticker">جار التحميل...</string>
   <string name="uploader_upload_in_progress_content">%1$dنسبة %% التحميل %2$s</string>
   <string name="uploader_upload_succeeded_ticker">تم التحميل بنجاح</string>
   <string name="uploader_upload_succeeded_content_single">%1$s تم التحميل</string>
@@ -181,7 +180,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">بانتظار اتصال الواي فاي</string>
   <string name="uploads_view_later_waiting_to_upload">بانتظار التحميل</string>
   <string name="uploads_view_unsupported_media_type">نوع الوسائط غير مدعوم</string>
-  <string name="downloader_download_in_progress_ticker">جار التنزيل…</string>
+  <string name="downloader_download_in_progress_ticker">جار التنزيل...</string>
   <string name="downloader_download_in_progress_content">%1$dنسبة %% التنزيل %2$s</string>
   <string name="downloader_download_succeeded_ticker">تم التنزيل بنجاح</string>
   <string name="downloader_download_succeeded_content">%1$s تم التنزيل</string>
@@ -245,8 +244,8 @@
   <string name="media_play_pause_description">زر التشغيل أو الإيقاف المؤقت</string>
   <string name="media_forward_description">زر التقديم السريع</string>
   <string name="upload_from_camera_title">صورة من الكاميرا</string>
-  <string name="auth_getting_authorization">جار الحصول على تفويض…</string>
-  <string name="auth_trying_to_login">جار محاولة تسجيل الدخول…</string>
+  <string name="auth_getting_authorization">جار الحصول على تفويض...</string>
+  <string name="auth_trying_to_login">جار محاولة تسجيل الدخول...</string>
   <string name="auth_no_net_conn_title">لا يوجد اتصال شبكة</string>
   <string name="auth_nossl_plain_ok_title">الاتصال الآمن غير متوفر.</string>
   <string name="auth_connection_established">تم إنشاء اتصال</string>
@@ -258,34 +257,42 @@
   <string name="auth_incorrect_path_title">لم يتم العثور على مثيل الخادم</string>
   <string name="auth_incorrect_address_title">صيغة خاطئة لعنوان الخادم</string>
   <string name="auth_ssl_general_error_title">فشل في تهيئة SSL</string>
-  <string name="auth_bad_oc_version_title">إصدار الخادم غير معروف</string>
-  <string name="auth_wrong_connection_title">لم ينجح الاتصال</string>
-  <string name="auth_secure_connection">نجح الاتصال آمن</string>
-  <string name="auth_unauthorized">اسم المستخدم أو كلمة المرور خاطئة</string>
-  <string name="auth_oauth_error">فشل في التحقق</string>
-  <string name="auth_oauth_error_access_denied">تم رفض الوصول من قبل الخادم المرخص</string>
-  <string name="auth_expired_oauth_token_toast">مدة التحقق انتهت , يرجى اعادة التحقق </string>
-  <string name="auth_unsupported_auth_method">الخادم لا يدعم طريقة التحقق هذه</string>
-  <string name="auth_unsupported_multiaccount">%1$s لا يدعم الحسابات المتعددة </string>
-  <string name="auth_fail_get_user_name">الخادم الخاص بك لم يعد الإتصال بهويتك الصحيحة, الرجاء الإتصال بالمسؤول
-	</string>
-  <string name="common_rename">إعادة التسمية</string>
-  <string name="common_remove">حذف</string>
-  <string name="confirmation_remove_file_alert">هل تريد حقاً حذف %1$s ؟</string>
-  <string name="confirmation_remove_folder_alert">هل ترغب في حذف %1$s و جهات الإتصال التابعة له؟ </string>
-  <string name="confirmation_remove_local">محليا فقط</string>
-  <string name="confirmation_remove_share_message">هل تريد حقاً حذف %1$s ؟</string>
-  <string name="remove_success_msg">تم الحذف بنجاح</string>
-  <string name="remove_fail_msg">فشل الحذف</string>
-  <string name="rename_dialog_title">أدخل اسما جديدا</string>
-  <string name="rename_local_fail_msg">لم تنجح إعادة تسمية النسخة المحلية، جرب اسما آخر</string>
-  <string name="rename_server_fail_msg">لم تكتمل إعادة التسمية</string>
-  <string name="sync_file_fail_msg">لا يمكن التحقق من الملف الخارجي</string>
-  <string name="sync_file_nothing_to_do_msg">تمت  مزامنة محتويات الملفات من قبل</string>
-  <string name="create_dir_fail_msg">لايمكن إنشاء المجلد</string>
-  <string name="filename_forbidden_characters">رموز ممنوعة: / \\ &lt; &gt; : \" | ? *</string>
-  <string name="filename_forbidden_charaters_from_server">اسم الملف به ، على الأقل ، حرف غير صالح</string>
-  <string name="filename_empty">إسم الملف لا يمكن أن يكون فارغاً</string>
+  <string name="auth_bad_oc_version_title">إصدار خادم غير معروف</string>
+  <string name="auth_wrong_connection_title">تعذر إنشاء اتصال</string>
+  <string name="auth_secure_connection">تم إنشاء اتصال آمن</string>
+  <string name="auth_unauthorized">اسم مستخدم أو كلمة مرور خاطئة</string>
+  <string name="auth_oauth_error">فشل في التفويض</string>
+  <string name="auth_oauth_error_access_denied">تم رفض الوصول من قِبل خادم التفويض</string>
+  <string name="auth_wtf_reenter_URL">حالة غير متوقعة؛ برجاء إعادة إدخال عنوان الخادم</string>
+  <string name="auth_expired_oauth_token_toast">انتهت صلاحية تفويضك. برجاء إعادة التفويض</string>
+  <string name="auth_expired_basic_auth_toast">برجاء إدخال كلمة المرور الحالية</string>
+  <string name="auth_connecting_auth_server">جار الاتصال بخادم المصادقة ...</string>
+  <string name="auth_unsupported_auth_method">لا يدعم الخادم طريقة المصادقة هذه</string>
+  <string name="auth_unsupported_multiaccount">%1$s لا يدعم الحسابات المتعددة</string>
+  <string name="auth_fail_get_user_name">لا يقوم خادمك بإرجاع هوية مستخدم صحيحة، برجاء الاتصال بالمسؤول</string>
+  <string name="auth_can_not_auth_against_server">لا يمكن المصادقة على هذا الخادم</string>
+  <string name="auth_account_does_not_exist">لم يعد الحساب موجودًا في الجهاز</string>
+  <string name="set_available_offline">تعيين كمتوفر دون اتصال بالإنترنت</string>
+  <string name="unset_available_offline">إلغاء التعيين كمتوفر دون اتصال بالإنترنت</string>
+  <string name="common_rename">إعادة تسمية</string>
+  <string name="common_remove">إزالة</string>
+  <string name="confirmation_remove_file_alert">هل ترغب حقًا في إزالة %1$s؟</string>
+  <string name="confirmation_remove_folder_alert">هل ترغب حقًا في إزالة %1$s ومحتوياته؟</string>
+  <string name="confirmation_remove_local">المحلي فقط</string>
+  <string name="confirmation_remove_account_alert">هل ترغب حقًا في إزالة حساب %1$s؟</string>
+  <string name="confirmation_remove_public_share_title">إزالة الرابط</string>
+  <string name="remove_success_msg">نجحت الإزالة</string>
+  <string name="remove_fail_msg">فشلت الإزالة</string>
+  <string name="rename_dialog_title">إدخال اسم جديد</string>
+  <string name="available_offline_inherited_msg">المجلد الذي يحتوي على هذا الملف متوفر دون اتصال بالإنترنت</string>
+  <string name="rename_local_fail_msg">تعذرت إعادة تسمية النسخة المحلية؛ جرب اسمًا مختلفًا</string>
+  <string name="rename_server_fail_msg">تعذر استكمال إعادة التسمية</string>
+  <string name="sync_file_fail_msg">تعذر فحص الملف البعيد</string>
+  <string name="sync_file_nothing_to_do_msg">تمت مزامنة محتويات الملف من قبل</string>
+  <string name="create_dir_fail_msg">تعذر إنشاء المجلد</string>
+  <string name="filename_forbidden_characters">الأحرف الممنوع استخدامها: / \\ &lt; &gt; : \" | ? *</string>
+  <string name="filename_forbidden_charaters_from_server">يحتوي اسم الملف على حرف واحد غير صالح على الأقل</string>
+  <string name="filename_empty">لا يمكن أن يكون اسم الملف فارغًا</string>
   <string name="wait_a_moment">انتظر للحظة</string>
   <string name="wait_checking_credentials">فحص بيانات الاعتماد المخزنة</string>
   <string name="filedisplay_unexpected_bad_get_content">خطا غير متوقع؛ برجاء تحديد الملف من تطبيق مختلف</string>
@@ -293,7 +300,7 @@
   <string name="activity_chooser_title">إرسال رابط إلى</string>
   <string name="wait_for_tmp_copy_from_private_storage">نسخ الملف من التخزين الخاص</string>
   <string name="oauth_check_onoff">تسجيل الدخول باستخدام oAuth2</string>
-  <string name="oauth_login_connection">جار الاتصال بخادم OAuth2…</string>
+  <string name="oauth_login_connection">جار الاتصال بخادم OAuth2...</string>
   <string name="ssl_validator_header">تعذر التحقق من هوية الخادم</string>
   <string name="ssl_validator_reason_cert_not_trusted">- شهادة الخادم غير موثوق بها</string>
   <string name="ssl_validator_reason_cert_expired">- شهادة الخادم منتهية الصلاحية</string>
@@ -344,13 +351,7 @@
   <string name="preview_image_error_unknown_format">لا يمكن عرض هذه الصورة</string>
   <string name="error__upload__local_file_not_copied">%1$s تعذر النسخ إلى المجلد المحلي لـ %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">مسار تحميل الصور</string>
-  <string name="get_shares_error">حدث خطأ أثناء محاولة استرداد المشاركات</string>
-  <string name="get_sharees_error">حدث خطأ أثناء محاولة استرداد المستخدمين والمجموعات</string>
-  <string name="get_capabilities_error">حدث خطأ أثناء محاولة استرداد الإمكانيات</string>
   <string name="share_link_no_support_share_api">عذرًا، المشاركة غير مفعلة على خادمك. برجاء الاتصال بالمسؤول.</string>
-  <string name="share_link_file_error">حدث خطأ أثناء محاولة مشاركة هذا الملف أو المجلد</string>
-  <string name="unshare_link_file_error">حدث خطأ أثناء محاولة إلغاء مشاركة هذا الملف أو المجلد</string>
-  <string name="update_link_file_error">حدث خطأ أثناء محاولة تحديث المشاركة</string>
   <string name="share_link_password_title">أدخل كلمة مرور</string>
   <string name="share_link_empty_password">يجب عليك إدخال كلمة مرور</string>
   <string name="activity_chooser_send_file_title">إرسال</string>
@@ -360,7 +361,6 @@
   <string name="clipboard_uxexpected_error">حدث خطأ غير متوقع أثناء النسخ إلى الحافظة</string>
   <string name="clipboard_label">تم نسخ النص من %1$s</string>
   <string name="error_cant_bind_to_operations_service">خطأ فادح: لا يمكن تنفيذ العمليات</string>
-  <string name="network_error_socket_exception">حدث خطأ أثناء الاتصال بالخادم</string>
   <string name="network_error_socket_timeout_exception">استغرق الخادم وقتًا طويلاً للغاية للاستجابة</string>
   <string name="network_error_connect_timeout_exception">استغرق الخادم وقتًا طويلاً للغاية للاتصال</string>
   <string name="network_host_not_available">تعذر الوصول إلى الخادم</string>
@@ -382,7 +382,7 @@
   <string name="log_send_history_button">إرسال المحفوظات</string>
   <string name="log_send_no_mail_app">لم يتم العثور على أي تطبيق لإرسال السجلات. برجاء تثبيت تطبيق بريد.</string>
   <string name="log_send_mail_subject">%1$s سجلات تطبيقات الأندرويد</string>
-  <string name="log_progress_dialog_text">جار تحميل البيانات…</string>
+  <string name="log_progress_dialog_text">جار تحميل البيانات...</string>
   <string name="actionbar_select_all">تحديد الكل</string>
   <string name="actionbar_select_inverse">تحديد العكس</string>
   <string name="actionbar_move">نقل</string>
