--- a/owncloudApp/src/main/res/values-ca/strings.xml
+++ b/owncloudApp/src/main/res/values-ca/strings.xml
@@ -92,7 +92,7 @@
   <string name="uploader_error_message_source_file_not_copied">S\'ha produït un error mentre es copiava el fitxer a una carpeta temporal. Sisplau intenta enviar-ho una altra vegada.</string>
   <string name="file_list_seconds_ago">segons enrere</string>
   <string name="file_list_empty">Res per aquí. Pugeu alguna cosa!</string>
-  <string name="file_list_loading">Carregant…</string>
+  <string name="file_list_loading">Carregant...</string>
   <string name="file_list_no_app_for_file_type">No s\'ha trobat cap aplicació per a aquest tipus d\'arxiu!</string>
   <string name="local_file_list_empty">No hi ha arxius a aquesta carpeta</string>
   <string name="local_file_list_empty_just_folders">No hi ha cap carpeta en aquesta carpeta.</string>
@@ -121,9 +121,8 @@
   <string name="common_back">Enrera</string>
   <string name="common_save_exit">Desa i surt</string>
   <string name="common_error">Error</string>
-  <string name="common_loading">Carregant…</string>
+  <string name="common_loading">Carregant...</string>
   <string name="common_unknown">desconegut</string>
-  <string name="common_error_unknown">Error desconegut</string>
   <string name="common_pending">Pendent</string>
   <string name="common_important">Important</string>
   <string name="about_title">Quant a</string>
@@ -227,11 +226,11 @@
   <string name="media_play_pause_description">Botó de reproducció o pausa</string>
   <string name="media_forward_description">Botó de reproducció ràpida</string>
   <string name="upload_from_camera_title">Fotografia de la càmera</string>
-  <string name="auth_getting_authorization">S\'està autenticant…</string>
+  <string name="auth_getting_authorization">S\'està autenticant...</string>
   <string name="auth_no_net_conn_title">Sense connexió de xarxa</string>
   <string name="auth_nossl_plain_ok_title">La connexió segura no està disponible.</string>
   <string name="auth_connection_established">S\'ha establert la connexió</string>
-  <string name="auth_testing_connection">S\'està comprovant la connexió…</string>
+  <string name="auth_testing_connection">S\'està comprovant la connexió...</string>
   <string name="auth_not_configured_title">La configuració del servidor està malformada</string>
   <string name="auth_account_not_new">Ja hi ha un compte al dispositiu pel mateix usuari i mateix servidor</string>
   <string name="auth_account_not_the_same">L\'usuari introduït no coincideix amb l\'usuari d\'aquest compte</string>
@@ -248,7 +247,7 @@
   <string name="auth_wtf_reenter_URL">Estat inesperat; torna a escriure l\'adreça del servidor</string>
   <string name="auth_expired_oauth_token_toast">La vostra autorització ha vençut. Acrediteu-vos de nou</string>
   <string name="auth_expired_basic_auth_toast">Escriviu la contrasenya actual</string>
-  <string name="auth_connecting_auth_server">Connectant amb el servidor d\'autentificació…</string>
+  <string name="auth_connecting_auth_server">Connectant amb el servidor d\'autentificació...</string>
   <string name="auth_unsupported_auth_method">El serivdor no permet aquest mètode d\'autenticació</string>
   <string name="auth_unsupported_multiaccount">%1$s no permet comptes múltiples</string>
   <string name="auth_fail_get_user_name">El servidor no retorna una id d\'usuari correcta, contacteu amb l\'administrador.</string>
@@ -263,7 +262,6 @@
   <string name="confirmation_remove_local">Només local</string>
   <string name="confirmation_remove_account_alert">Segur que vols borrar el compte %1$s?</string>
   <string name="confirmation_remove_public_share_title">Borrar l\'enllaç</string>
-  <string name="confirmation_remove_share_message">Esteu segur que voleu eliminar %1$s?</string>
   <string name="remove_success_msg">L\'eliminació ha tingut èxit</string>
   <string name="remove_fail_msg">No s\'ha pogut completar l\'eliminació</string>
   <string name="rename_dialog_title">Introdueix un nom nou</string>
@@ -282,7 +280,7 @@
   <string name="filedisplay_no_file_selected">No heu seleccionat cap fitxer</string>
   <string name="wait_for_tmp_copy_from_private_storage">Copiant fitxer des de emmagatzemament privat</string>
   <string name="oauth_check_onoff">Accés amb oAuth2</string>
-  <string name="oauth_login_connection">Connectant al servidor OAuth2…</string>
+  <string name="oauth_login_connection">Connectant al servidor OAuth2...</string>
   <string name="ssl_validator_header">La identitat del servidor no ha pogut ser verificada</string>
   <string name="ssl_validator_reason_cert_not_trusted">- El certificat del servidor no està autenticat</string>
   <string name="ssl_validator_reason_cert_expired">- El certificat del servidor ha expirat</string>
@@ -331,9 +329,6 @@
   <string name="error__upload__local_file_not_copied">%1$s no s\'ha pogut copiar a la carpeta local %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Ruta de pujada de les fotos</string>
   <string name="share_link_no_support_share_api">La compartició no es troba disponible al vostre servidor. Contacteu amb l\'administrador.</string>
-  <string name="share_link_file_error">S\'ha produït un error en intentar compartir aquest fitxer o carpeta</string>
-  <string name="unshare_link_file_error">S\'ha produït un error en intentar deixar de compartir aquest fitxer o carpeta</string>
-  <string name="update_link_file_error">S\'ha produït un error en tractar d\'actualitzar la compartició</string>
   <string name="share_link_password_title">Escriviu una contrasenya</string>
   <string name="share_link_empty_password">Heu d\'escriure una contrasenya</string>
   <string name="activity_chooser_send_file_title">Envia</string>
@@ -343,7 +338,6 @@
   <string name="clipboard_uxexpected_error">Error inesperat quan es copiava al porta-retalls</string>
   <string name="clipboard_label">Text copiat des de %1$s</string>
   <string name="error_cant_bind_to_operations_service">Error crític: no es poden realitzar operacions</string>
-  <string name="network_error_socket_exception">Hi ha hagut un error mentre es connectava al servidor.</string>
   <string name="network_error_socket_timeout_exception">El servidor ha trigat massa en respondre</string>
   <string name="network_error_connect_timeout_exception">El servidor tarda massa en connectar</string>
   <string name="network_host_not_available">No es troba el servidor.</string>
@@ -365,7 +359,7 @@
   <string name="log_send_history_button">Enviar història</string>
   <string name="log_send_no_mail_app">No es troba aplicació per enviar els registres. Si us plau, instal·la una aplicació de email.</string>
   <string name="log_send_mail_subject">%1$s app de registres Android</string>
-  <string name="log_progress_dialog_text">Carregant dades…</string>
+  <string name="log_progress_dialog_text">Carregant dades...</string>
   <string name="actionbar_select_all">Seleccionar tot</string>
   <string name="actionbar_move">Moure</string>
   <string name="file_list_empty_moving">Res per aquí. Pots afegir una carpeta!</string>
