--- a/owncloudApp/src/main/res/values-cs-rCZ/strings.xml
+++ b/owncloudApp/src/main/res/values-cs-rCZ/strings.xml
@@ -64,7 +64,7 @@ Automaticky nahrát video snímané kamerou
   <string name="auth_failure_snackbar_action">Změna účtu</string>
   <string name="auth_oauth_failure_snackbar_action">Přihlásit</string>
   <string name="auth_check_server">Ověřit server</string>
-  <string name="auth_host_url">Adresa serveru https://…</string>
+  <string name="auth_host_url">Adresa serveru https://...</string>
   <string name="auth_username">Uživatelské jméno</string>
   <string name="auth_password">Heslo</string>
   <string name="auth_register">Nováček s %1$s?</string>
@@ -86,7 +86,7 @@ Automaticky nahrát video snímané kamerou
   <string name="file_list_seconds_ago">před pár sekundami</string>
   <string name="file_list_empty">Žádný obsah. Nahrajte něco!</string>
   <string name="file_list_empty_available_offline">Nejsou dostupné žádné offline soubory.</string>
-  <string name="file_list_loading">Načítání…</string>
+  <string name="file_list_loading">Načítání...</string>
   <string name="file_list_no_app_for_file_type">Pro typ souboru nebyla nalezena aplikace</string>
   <string name="local_file_list_empty">V tomto adresáři nejsou žádné soubory.</string>
   <string name="local_file_list_empty_just_folders">V tomto adresáři nejsou žádné podadresáře.</string>
@@ -116,9 +116,8 @@ Automaticky nahrát video snímané kamerou
   <string name="common_back">Zpět</string>
   <string name="common_save_exit">Uložit &amp; ukončit</string>
   <string name="common_error">Chyba</string>
-  <string name="common_loading">Načítání…</string>
+  <string name="common_loading">Načítání...</string>
   <string name="common_unknown">neznámý</string>
-  <string name="common_error_unknown">Neznámá chyba</string>
   <string name="common_pending">Nevyřízené</string>
   <string name="common_important">Důležité</string>
   <string name="about_title">O aplikaci</string>
@@ -127,7 +126,7 @@ Automaticky nahrát video snímané kamerou
   <string name="create_account">Vytvořit účet</string>
   <string name="upload_chooser_title">Nahrát z</string>
   <string name="uploader_info_dirname">Název adresáře</string>
-  <string name="uploader_upload_in_progress_ticker">Nahrávám…</string>
+  <string name="uploader_upload_in_progress_ticker">Nahrávám...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Odesílám %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Odesílání úspěšné</string>
   <string name="uploader_upload_succeeded_content_single">%1$s nahráno</string>
@@ -166,7 +165,7 @@ Automaticky nahrát video snímané kamerou
   <string name="uploads_view_upload_status_waiting_for_wifi">Čekání na wifi připojení</string>
   <string name="uploads_view_later_waiting_to_upload">Čekání na nahrávání</string>
   <string name="uploads_view_unsupported_media_type">Nepodporovaný typ média</string>
-  <string name="downloader_download_in_progress_ticker">Stahuji…</string>
+  <string name="downloader_download_in_progress_ticker">Stahuji...</string>
   <string name="downloader_download_in_progress_content">%1$d%% Stahuji %2$s</string>
   <string name="downloader_download_succeeded_ticker">Stažení úspěšné</string>
   <string name="downloader_download_succeeded_content">%1$s staženo</string>
@@ -230,8 +229,8 @@ Automaticky nahrát video snímané kamerou
   <string name="media_play_pause_description">Tlačítko Přehrát/Pozastavit</string>
   <string name="media_forward_description">Tlačítko Rychle vpřed</string>
   <string name="upload_from_camera_title">Obrázek z kamery</string>
-  <string name="auth_getting_authorization">Kontroluji pověření…</string>
-  <string name="auth_trying_to_login">Přihlašuji…</string>
+  <string name="auth_getting_authorization">Kontroluji pověření...</string>
+  <string name="auth_trying_to_login">Přihlašuji...</string>
   <string name="auth_no_net_conn_title">Žádné síťové spojení</string>
   <string name="auth_nossl_plain_ok_title">Zabezpečené spojení není k dispozici</string>
   <string name="auth_connection_established">Spojení navázáno</string>
@@ -252,7 +251,7 @@ Automaticky nahrát video snímané kamerou
   <string name="auth_wtf_reenter_URL">Neočekávaný stav; zadejte prosím znovu adresu serveru</string>
   <string name="auth_expired_oauth_token_toast">Vaše přihlášení vypršelo. Přihlaste se prosím znovu</string>
   <string name="auth_expired_basic_auth_toast">Zadejte prosím aktuální heslo</string>
-  <string name="auth_connecting_auth_server">Připojování k ověřovacímu serveru …</string>
+  <string name="auth_connecting_auth_server">Připojování k ověřovacímu serveru ...</string>
   <string name="auth_unsupported_auth_method">Server nepodporuje tuto přihlašovací metodu</string>
   <string name="auth_unsupported_multiaccount">%1$s nepodporuje více účtů</string>
   <string name="auth_fail_get_user_name">Váš server nevrací správné přihlašovací ID, kontaktujte prosím svého správce systému</string>
@@ -267,7 +266,6 @@ Automaticky nahrát video snímané kamerou
   <string name="confirmation_remove_local">Pouze místní</string>
   <string name="confirmation_remove_account_alert">Opravdu chcete odstranit účet %1$s ?</string>
   <string name="confirmation_remove_public_share_title">Odstranění odkazu</string>
-  <string name="confirmation_remove_share_message">Opravdu chcete odstranit %1$s ?</string>
   <string name="remove_success_msg">Úspěšně odstraněno</string>
   <string name="remove_fail_msg">Odstranění nelze dokončit</string>
   <string name="rename_dialog_title">Zadejte nový název</string>
@@ -340,9 +338,6 @@ Automaticky nahrát video snímané kamerou
   <string name="prefs_camera_picture_upload_path_title">Cesta k nahrání obrázku</string>
   <string name="share_link_no_support_share_api">Je nám líto, ale sdílení není na vašem serveru povoleno. Kontaktujte svého
 správce systému.</string>
-  <string name="share_link_file_error">Při pokusu o sdílení tohoto souboru či adresáře nastala chyba</string>
-  <string name="unshare_link_file_error">Při pokusu o zrušení sdílení tohoto souboru či adresáře nastala chyba</string>
-  <string name="update_link_file_error">Došlo k chybě při pokusu o aktualizaci sdílení</string>
   <string name="share_link_password_title">Zadejte heslo</string>
   <string name="share_link_empty_password">Musíte zadat heslo</string>
   <string name="activity_chooser_send_file_title">Odeslat</string>
@@ -352,7 +347,6 @@ správce systému.</string>
   <string name="clipboard_uxexpected_error">Neočekávaná chyba při kopírování do schránky</string>
   <string name="clipboard_label">Text zkopírován z %1$s</string>
   <string name="error_cant_bind_to_operations_service">Kritická chyba: operace nelze provést</string>
-  <string name="network_error_socket_exception">Při pokusu o připojení k serveru došlo k chybě.</string>
   <string name="network_error_socket_timeout_exception">Serveru trvalo příliš dlouho odpovědět</string>
   <string name="network_error_connect_timeout_exception">Připojování k serveru trvalo příliš dlouho</string>
   <string name="network_host_not_available">Server je nedostupný</string>
