--- a/owncloudApp/src/main/res/values-el/strings.xml
+++ b/owncloudApp/src/main/res/values-el/strings.xml
@@ -73,6 +73,7 @@
   <string name="passcode_already_set">Δεν είναι δυνατή η ταυτόχρονη ενεργοποίηση των κλειδώματος με μοτίβο και κωδικό, απενεργοποιήστε πρώτα τον κωδικό</string>
   <string name="pattern_no_longer_required">Το μοτίβο δεν θα ζητείται πια</string>
   <string name="pattern_configure_your_pattern_explanation">Το πρότυπο θα ζητηθεί κάθε φορά που ξεκινάει η εφαρμογή</string>
+  <string name="pass_code_locked">Κλείδωμα με κωδικό</string>
   <string name="pattern_locked">Κλείδωμα με μοτίβο</string>
   <string name="illegal_argument_exception_message">Μια έγκυρη ΕΝΕΡΓΕΙΑ είναι απαραίτητη για την πρόθεση να περάσει σε</string>
   <string name="recommend_subject">Δοκιμάστε %1$s στο κινητό σας!</string>
@@ -103,7 +104,7 @@
   <string name="file_list_seconds_ago">δευτερόλεπτα πριν</string>
   <string name="file_list_empty">Δεν υπάρχει τίποτα εδώ. Μεταφορτώστε κάτι!</string>
   <string name="file_list_empty_available_offline">Δεν υπάρχουν διαθέσιμα αρχεία εκτός σύνδεση.</string>
-  <string name="file_list_loading">Γίνεται φόρτωση…</string>
+  <string name="file_list_loading">Γίνεται φόρτωση...</string>
   <string name="file_list_no_app_for_file_type">Δεν βρέθηκε καμία εφαρμογή για τύπο αρχείου</string>
   <string name="local_file_list_empty">Δεν υπάρχουν αρχεία σε αυτό τον φάκελο.</string>
   <string name="local_file_list_empty_just_folders">Δεν υπάρχουν άλλοι φάκελοι μέσα σε αυτόν τον φάκελο.</string>
@@ -133,9 +134,8 @@
   <string name="common_back">Πίσω</string>
   <string name="common_save_exit">Αποθήκευση &amp; έξοδος</string>
   <string name="common_error">Σφάλμα</string>
-  <string name="common_loading">Γίνεται φόρτωση…</string>
+  <string name="common_loading">Γίνεται φόρτωση...</string>
   <string name="common_unknown">άγνωστο</string>
-  <string name="common_error_unknown">Άγνωστο σφάλμα</string>
   <string name="common_pending">Εκκρεμεί</string>
   <string name="common_important">Σημαντικό </string>
   <string name="about_title">Περί</string>
@@ -220,7 +220,6 @@
   <string name="pass_code_wrong">Εσφαλμένος κωδικός</string>
   <string name="pass_code_removed">Ο κωδικός αφαιρέθηκε</string>
   <string name="pass_code_stored">Ο κωδικός αποθηκεύτηκε</string>
-  <string name="pass_code_locked">Κλείδωμα με κωδικό</string>
   <string name="fingerprint_confirm">Επιβεβαιώστε το δακτυλικό σας αποτύπωμα για να συνεχίσετε</string>
   <string name="fingerprint_hint">Αγγίξτε τον αισθητήρα</string>
   <string name="fingerprint_not_recognized">Δεν αναγνωρίστηκε το δακτυλικό αποτύπωμα, δοκιμάστε ξανά</string>
@@ -248,7 +247,7 @@
   <string name="media_play_pause_description">Κουμπί αναπαραγωγής ή παύσης</string>
   <string name="media_forward_description">Κουμπί προώθησης</string>
   <string name="upload_from_camera_title">Φωτογραφία από την κάμερα</string>
-  <string name="auth_getting_authorization">Λήψη πιστοποίησης…</string>
+  <string name="auth_getting_authorization">Λήψη πιστοποίησης...</string>
   <string name="auth_trying_to_login">Προσπάθεια εισόδου…</string>
   <string name="auth_no_net_conn_title">Δεν υπάρχει σύνδεση στο δίκτυο</string>
   <string name="auth_nossl_plain_ok_title">Μη διαθέσιμη ασφαλής σύνδεση.</string>
@@ -270,7 +269,7 @@
   <string name="auth_wtf_reenter_URL">Απροσδόκητη κατάσταση, παρακαλούμε εισάγετε ξανά τη διεύθυνση του διακομιστή</string>
   <string name="auth_expired_oauth_token_toast">Η πιστοποίησή σας έληξε. Παρακαλούμε πιστοποιήστε ξανά</string>
   <string name="auth_expired_basic_auth_toast">Παρακαλούμε εισάγετε το τρέχον συνθηματικό</string>
-    <string name="auth_connecting_auth_server">Συνδεθείτε στον εξουσιοδοτημένο διακομιστή …</string>
+  <string name="auth_connecting_auth_server">Συνδεθείτε στον εξουσιοδοτημένο διακομιστή …</string>
   <string name="auth_unsupported_auth_method">Ο διακομιστής δεν υποστηρίζει αυτή τη μέθοδο πιστοποίησης</string>
   <string name="auth_unsupported_multiaccount">Ο %1$s  δεν υποστηρίζει πολλαπλούς λογαριασμούς</string>
   <string name="auth_fail_get_user_name">Ο διακομιστής σας δεν επιστρέφει το σωστό αναγνωριστικό χρήστη, παρακαλούμε επικοινωνήστε με τον διαχειριστή
@@ -286,8 +285,7 @@
   <string name="confirmation_remove_local">Μόνο τοπικά</string>
   <string name="confirmation_remove_account_alert">Θέλετε πραγματικά να αφαιρέσετε τον λογαριασμό %1$s;</string>
   <string name="confirmation_remove_public_share_title">Αφαίρεση συνδέσμου</string>
-  <string name="confirmation_remove_share_message">Θέλετε στα αλήθεια να αφαιρέσετε το %1$s;</string>
-  <string name="remove_success_msg">Αφαίρεση επιτυχής</string>
+  <string name="remove_success_msg">Επιτυχής αφαίρεση</string>
   <string name="remove_fail_msg">Η αφαίρεση απέτυχε</string>
   <string name="rename_dialog_title">Εισάγετε νέο όνομα</string>
   <string name="available_offline_inherited_msg">Ο φάκελος που περιέχει αυτό το αρχείο είναι διαθέσιμος εκτός σύνδεσης</string>
@@ -306,7 +304,7 @@
   <string name="activity_chooser_title">Αποστολή συνδέσμου σε</string>
   <string name="wait_for_tmp_copy_from_private_storage">Αντιγραφή αρχείου από ιδιωτικό αποθηκευτικό χώρο</string>
   <string name="oauth_check_onoff">Σύνδεση με oAuth2</string>
-  <string name="oauth_login_connection">Γίνεται σύνδεση με τον διακομιστή OAuth2…</string>
+  <string name="oauth_login_connection">Γίνεται σύνδεση με τον διακομιστή OAuth2...</string>
   <string name="ssl_validator_header">Δεν ήταν δυνατή η επαλήθευση της ταυτότητας του διακομιστή</string>
   <string name="ssl_validator_reason_cert_not_trusted">- Το πιστοποιητικό του διακομιστή δεν είναι έμπιστο</string>
   <string name="ssl_validator_reason_cert_expired">- Το πιστοποιητικό του διακομιστή έχει λήξει</string>
@@ -357,14 +355,8 @@
   <string name="preview_image_error_unknown_format">Αυτή η εικόνα δεν μπορεί να προβληθεί</string>
   <string name="error__upload__local_file_not_copied">Το %1$s δεν μπόρεσε να αντιγραφεί στον τοπικό φάκελο %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Διαδρομή μεταφόρτωσης εικόνων</string>
-  <string name="get_shares_error">Παρουσιάστηκε σφάλμα κατά την προσπάθεια ανάκτησης κοινόχρηστων</string>
-  <string name="get_sharees_error">Παρουσιάστηκε σφάλμα κατά την προσπάθεια ανάκτησης χρηστών και ομάδων</string>
-  <string name="get_capabilities_error">Παρουσιάστηκε σφάλμα κατά την προσπάθεια ανάκτησης δυνατοτήτων</string>
   <string name="share_link_no_support_share_api">Λυπούμαστε, ο διαμοιρασμός δεν επιτρέπεται στο διακομιστή σας. Παρακαλούμε επικοινωνήστε με το
 		διαχειριστή σας.</string>
-  <string name="share_link_file_error">Ένα σφάλμα προέκυψε κατά την προσπάθεια διαμοιρασμού αυτού του αρχείου ή φακέλου</string>
-  <string name="unshare_link_file_error">Ένα σφάλμα προέκυψε κατά τη διάρκεια ακύρωσης διαμοιρασμού αυτού του αρχείου ή φακέλου</string>
-  <string name="update_link_file_error">Ένα σφάλμα προέκυψε κατά τη διάρκεια ενημέρωσης του κοινόχρηστου</string>
   <string name="share_link_password_title">Εισάγετε συνθηματικό</string>
   <string name="share_link_empty_password">Πρέπει να εισάγετε συνθηματικό</string>
   <string name="activity_chooser_send_file_title">Αποστολή</string>
@@ -374,7 +366,6 @@
   <string name="clipboard_uxexpected_error">Απρόσμενο σφάλμα κατά την αντιγραφή στο πρόχειρο</string>
   <string name="clipboard_label">Το κείμενο αντιγράφτηκε από %1$s</string>
   <string name="error_cant_bind_to_operations_service">Κρίσιμο σφάλμα: αδυναμία εκτέλεσης λειτουργιών</string>
-  <string name="network_error_socket_exception">Ένα σφάλμα προέκυψε κατά τη σύνδεση με το διακομιστή.</string>
   <string name="network_error_socket_timeout_exception">Ο διακομιστής αργεί πολύ να απαντήσει</string>
   <string name="network_error_connect_timeout_exception">Ο διακομιστής αργεί πολύ να συνδεθεί</string>
   <string name="network_host_not_available">Δεν ήταν δυνατή η πρόσβαση στον διακομιστή</string>
