--- a/owncloudApp/src/main/res/values-es-rAR/strings.xml
+++ b/owncloudApp/src/main/res/values-es-rAR/strings.xml
@@ -73,6 +73,7 @@
   <string name="passcode_already_set">El patrón y la clave de desbloqueo no pueden estar activos al mismo tiempo, por favor desactiva primero la clave</string>
   <string name="pattern_no_longer_required">El patrón no se volverá a solicitar</string>
   <string name="pattern_configure_your_pattern_explanation">Se solicitará el patrón cada vez que se inicie una aplicación</string>
+  <string name="pass_code_locked">Bloqueado con código de acceso</string>
   <string name="pattern_locked">Bloqueado con patrón</string>
   <string name="illegal_argument_exception_message">Se necesita una ACCION válida para poder pasar a</string>
   <string name="recommend_subject">¡Intento %1$s en tu teléfono inteligente!</string>
@@ -82,7 +83,7 @@
   <string name="auth_oauth_failure">El tóken de acceso ha expirado o se ha vuelto inválido. Ingresa nuevamente para conseguir el acceso</string>
   <string name="auth_oauth_failure_snackbar_action">Entrar</string>
   <string name="auth_check_server">Verificar servidor</string>
-  <string name="auth_host_url">Dirección del servidor https://…</string>
+  <string name="auth_host_url">Dirección del servidor https://...</string>
   <string name="auth_username">Nombre de usuario</string>
   <string name="auth_password">Contraseña</string>
   <string name="auth_register">¿Sos nuevo para %1$s?</string>
@@ -104,7 +105,7 @@
   <string name="file_list_seconds_ago">segundos atrás</string>
   <string name="file_list_empty">No hay nada. ¡Subí contenido!</string>
   <string name="file_list_empty_available_offline">No hay archivos disponibles sin conexión.</string>
-  <string name="file_list_loading">Cargando…</string>
+  <string name="file_list_loading">Cargando...</string>
   <string name="file_list_no_app_for_file_type">No se ha encontrado una aplicación para este tipo de archivo</string>
   <string name="local_file_list_empty">No existen archivos en esta carpeta.</string>
   <string name="local_file_list_empty_just_folders">No hay subcarpetas en esta carpeta.</string>
@@ -134,9 +135,8 @@
   <string name="common_back">Volver</string>
   <string name="common_save_exit">Guardar &amp; Salir</string>
   <string name="common_error">Error</string>
-  <string name="common_loading">Cargando…</string>
+  <string name="common_loading">Cargando...</string>
   <string name="common_unknown">desconocido</string>
-  <string name="common_error_unknown">Error desconocido</string>
   <string name="common_pending">Pendientes</string>
   <string name="common_important">Importante</string>
   <string name="about_title">Acerca de</string>
@@ -145,7 +145,7 @@
   <string name="create_account">Crear cuenta</string>
   <string name="upload_chooser_title">Subir desde</string>
   <string name="uploader_info_dirname">Nombre de la carpeta</string>
-  <string name="uploader_upload_in_progress_ticker">Subiendo…</string>
+  <string name="uploader_upload_in_progress_ticker">Subiendo...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Subiendo %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Subido con éxito</string>
   <string name="uploader_upload_succeeded_content_single">%1$s cargado</string>
@@ -184,7 +184,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Esperando conectividad WiFi</string>
   <string name="uploads_view_later_waiting_to_upload">Esperando para cargar</string>
   <string name="uploads_view_unsupported_media_type">Archivo de medios no soportado</string>
-  <string name="downloader_download_in_progress_ticker">Descargando…</string>
+  <string name="downloader_download_in_progress_ticker">Descargando...</string>
   <string name="downloader_download_in_progress_content">%1$d%%  descargando %2$s</string>
   <string name="downloader_download_succeeded_ticker">Descarga completa</string>
   <string name="downloader_download_succeeded_content">%1$s descargado</string>
@@ -220,7 +220,6 @@
   <string name="pass_code_wrong">Contraseña incorrecta</string>
   <string name="pass_code_removed">Contraseña eliminada</string>
   <string name="pass_code_stored">Contraseña almacenada</string>
-  <string name="pass_code_locked">Bloqueado con código de acceso</string>
   <string name="fingerprint_confirm">Confirma tu huella dactilar para continuar</string>
   <string name="fingerprint_hint">Toca el sensor</string>
   <string name="fingerprint_not_recognized">Huella dactilar no reconocida, intente nuevamente</string>
@@ -248,8 +247,8 @@
   <string name="media_play_pause_description">Botón de reproducción o pausa </string>
   <string name="media_forward_description">Botón avance rápido</string>
   <string name="upload_from_camera_title">Imagen desde la cámara</string>
-  <string name="auth_getting_authorization">Obteniendo autorización…</string>
-  <string name="auth_trying_to_login">Intentando identificar…</string>
+  <string name="auth_getting_authorization">Obteniendo autorización...</string>
+  <string name="auth_trying_to_login">Intentando identificar...</string>
   <string name="auth_no_net_conn_title">Sin conexión de red</string>
   <string name="auth_nossl_plain_ok_title">Conexión segura no disponible.</string>
   <string name="auth_connection_established">Conexión establecida</string>
@@ -270,7 +269,7 @@
   <string name="auth_wtf_reenter_URL">Estado inesperado; por favor ingrese nuevamente la dirección del servidor</string>
   <string name="auth_expired_oauth_token_toast">Tu autorización ha expirado. Por favor, obtenga una nueva autorización</string>
   <string name="auth_expired_basic_auth_toast">Por favor ingrese su contraseña actual</string>
-  <string name="auth_connecting_auth_server">Conectando al servidor de autenticación …</string>
+  <string name="auth_connecting_auth_server">Conectando al servidor de autenticación ...</string>
   <string name="auth_unsupported_auth_method">El servidor no soporta este método de autenticación</string>
   <string name="auth_unsupported_multiaccount">%1$s no soporta múltiples cuentas</string>
   <string name="auth_fail_get_user_name">Tú servidor no esta regresando una identificación de usuario correcta, por favor contacta a un administrador</string>
@@ -285,7 +284,6 @@
   <string name="confirmation_remove_local">Sólo local</string>
   <string name="confirmation_remove_account_alert">¿Está seguro que quiere eliminar la cuenta %1$s?</string>
   <string name="confirmation_remove_public_share_title">Eliminar enlace</string>
-  <string name="confirmation_remove_share_message">¿Realmente quieres eliminar %1$s?</string>
   <string name="remove_success_msg">Borrado correctamente</string>
   <string name="remove_fail_msg">El borrado no pudo ser completado</string>
   <string name="rename_dialog_title">Ingrese un nombre</string>
@@ -354,14 +352,8 @@
   <string name="preview_image_error_unknown_format">Esta imagen no puede ser mostrada</string>
   <string name="error__upload__local_file_not_copied">%1$s no pudo ser copiado a la carpeta local %2$s </string>
   <string name="prefs_camera_picture_upload_path_title">Ruta de carga de la imagen</string>
-  <string name="get_shares_error">Ha ocurrido un error al intentar obtener los recursos compartidos</string>
-  <string name="get_sharees_error">Ha ocurrido un error al intentar obtener los usuarios y grupos</string>
-  <string name="get_capabilities_error">Ha ocurrido un error al intentar obtener las capacidades</string>
   <string name="share_link_no_support_share_api">Lo sentimos, compartir no esta activado en su servidor. Por favor contacte a su
 ⇥⇥administrator.</string>
-  <string name="share_link_file_error">Un error ocurrió cuando se intentaba compartir el archivo o carpeta</string>
-  <string name="unshare_link_file_error">Un error ocurrió cuando se intentaba dejar de compartir el archivo o carpeta</string>
-  <string name="update_link_file_error">Ha ocurrido un error al momento de actualizar el compartido</string>
   <string name="share_link_password_title">Ingresa una contraseña</string>
   <string name="share_link_empty_password">Debes ingresar una contraseña</string>
   <string name="activity_chooser_send_file_title">Mandar</string>
@@ -371,7 +363,6 @@
   <string name="clipboard_uxexpected_error">Error inesperado al copiar al portapapeles</string>
   <string name="clipboard_label">Texto copiado desde %1$s</string>
   <string name="error_cant_bind_to_operations_service">Error critico: no se puede realizar operaciones</string>
-  <string name="network_error_socket_exception">Un error ocurrió mientras se conectaba con el Servidor.</string>
   <string name="network_error_socket_timeout_exception">El servidor tardó demasiado en responder</string>
   <string name="network_error_connect_timeout_exception">El servidor tomó demasiado tiempo para conectar</string>
   <string name="network_host_not_available">El servidor no ha podido ser alcanzado</string>
@@ -393,7 +384,7 @@
   <string name="log_send_history_button">Enviar historial</string>
   <string name="log_send_no_mail_app">No se ha encontrado una aplicación para enviar los registros. Por favor instale una aplicación de correo.</string>
   <string name="log_send_mail_subject">%1$s Registros de la aplicación Android</string>
-  <string name="log_progress_dialog_text">Cargando datos…</string>
+  <string name="log_progress_dialog_text">Cargando datos...</string>
   <string name="actionbar_select_all">Seleccionar todos</string>
   <string name="actionbar_select_inverse">Invertir selección</string>
   <string name="actionbar_move">Mover</string>
