--- a/owncloudApp/src/main/res/values-fr/strings.xml
+++ b/owncloudApp/src/main/res/values-fr/strings.xml
@@ -30,7 +30,7 @@
   <string name="drawer_unavailable_free_storage">%1$s utilisé(s)</string>
   <string name="drawer_unavailable_used_storage">Aucune information d\'utilisation du stockage disponible</string>
   <string name="drawer_feedback">Retour d’expérience</string>
-  <string name="drawer_help">Aide…</string>
+  <string name="drawer_help">Aide...</string>
   <string name="prefs_category_general">Général</string>
   <string name="prefs_category_more">Plus</string>
   <string name="prefs_category_security">Sécurité</string>
@@ -96,7 +96,7 @@ Téléchargez-le ici : %2$s</string>
   <string name="file_list_seconds_ago">il y a quelques secondes</string>
   <string name="file_list_empty">Il n\'y a rien ici ! Envoyez donc quelque chose :)</string>
   <string name="file_list_empty_available_offline">Il n’y a pas de fichier hors connexion disponible.</string>
-  <string name="file_list_loading">Chargement…</string>
+  <string name="file_list_loading">Chargement...</string>
   <string name="file_list_no_app_for_file_type">Aucune application trouvée pour ce type de fichier</string>
   <string name="local_file_list_empty">Aucun fichier n\'est présent dans ce dossier.</string>
   <string name="local_file_list_empty_just_folders">Il n\'y a pas de dossiers dans ce dossier.</string>
@@ -126,9 +126,8 @@ Téléchargez-le ici : %2$s</string>
   <string name="common_back">Retour</string>
   <string name="common_save_exit">Enregistrer et quitter</string>
   <string name="common_error">Erreur</string>
-  <string name="common_loading">Chargement…</string>
+  <string name="common_loading">Chargement...</string>
   <string name="common_unknown">Inconnu</string>
-  <string name="common_error_unknown">Erreur inconnue </string>
   <string name="common_pending">En attente</string>
   <string name="common_important">Important</string>
   <string name="about_title">À propos</string>
@@ -137,7 +136,7 @@ Téléchargez-le ici : %2$s</string>
   <string name="create_account">Créer un compte</string>
   <string name="upload_chooser_title">Téléversez depuis</string>
   <string name="uploader_info_dirname">Nom du dossier</string>
-  <string name="uploader_upload_in_progress_ticker">Téléversement …</string>
+  <string name="uploader_upload_in_progress_ticker">Téléversement ...</string>
   <string name="uploader_upload_in_progress_content">Envoi du fichier %2$s : %1$d%% effectués</string>
   <string name="uploader_upload_succeeded_ticker">Téléversement réussi</string>
   <string name="uploader_upload_succeeded_content_single">%1$s téléversé</string>
@@ -173,7 +172,7 @@ Téléchargez-le ici : %2$s</string>
   <string name="uploads_view_upload_status_waiting_for_wifi">En attente d\'une connexion wifi</string>
   <string name="uploads_view_later_waiting_to_upload">En attente de chargement</string>
   <string name="uploads_view_unsupported_media_type">Type de média non pris en charge</string>
-  <string name="downloader_download_in_progress_ticker">Téléchargement …</string>
+  <string name="downloader_download_in_progress_ticker">Téléchargement ...</string>
   <string name="downloader_download_in_progress_content">Téléchargement en cours de %2$s, %1$d%% effectués</string>
   <string name="downloader_download_succeeded_ticker">Téléchargement réussi</string>
   <string name="downloader_download_succeeded_content">%1$s téléchargé</string>
@@ -241,7 +240,7 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="media_forward_description">Bouton d\'avance rapide</string>
   <string name="upload_from_camera_title">Image de la caméra</string>
   <string name="auth_getting_authorization">Demande d\'autorisation…</string>
-  <string name="auth_trying_to_login">Tentative de connexion …</string>
+  <string name="auth_trying_to_login">Tentative de connexion ...</string>
   <string name="auth_no_net_conn_title">Pas de connexion réseau</string>
   <string name="auth_nossl_plain_ok_title">Connexion sécurisée non disponible</string>
   <string name="auth_connection_established">Connexion établie</string>
@@ -262,7 +261,7 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="auth_wtf_reenter_URL">Problème inattendu ; veuillez saisir à nouveau l\'adresse du serveur</string>
   <string name="auth_expired_oauth_token_toast">Votre autorisation a expiré. Merci de vous authentifier à nouveau</string>
   <string name="auth_expired_basic_auth_toast">Veuillez saisir votre mot de passe</string>
-    <string name="auth_connecting_auth_server">Connexion au serveur d\'authentification …</string>
+  <string name="auth_connecting_auth_server">Connexion au serveur d\'authentification …</string>
   <string name="auth_unsupported_auth_method">Le serveur ne prend pas en charge pas cette méthode d\'authentification</string>
   <string name="auth_unsupported_multiaccount">%1$s ne prend pas en charge les comptes multiples</string>
   <string name="auth_fail_get_user_name">Votre serveur a retourné un identifiant d\'utilisateur incorrect. Veuillez prendre contact avec votre administrateur
@@ -278,7 +277,6 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="confirmation_remove_local">Local seulement</string>
   <string name="confirmation_remove_account_alert">Voulez-vous vraiment supprimer le compte %1$s ?</string>
   <string name="confirmation_remove_public_share_title">Supprimer le lien</string>
-  <string name="confirmation_remove_share_message">Voulez-vous vraiment supprimer %1$s ?</string>
   <string name="remove_success_msg">Suppression effectuée avec succès</string>
   <string name="remove_fail_msg">Suppression impossible</string>
   <string name="rename_dialog_title">Entrez un nouveau nom</string>
@@ -349,12 +347,7 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="preview_image_error_unknown_format">Cette image ne peut pas être affichée</string>
   <string name="error__upload__local_file_not_copied">%1$s n\'a pas pu être copié dans le dossier local %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Chemin d\'accès au répertoire de téléversement des images</string>
-  <string name="get_shares_error">Une erreur est survenue pendant la récupération des partages</string>
-  <string name="get_sharees_error">Une erreur est survenue pendant la récupération des utilisateurs et des groupes</string>
   <string name="share_link_no_support_share_api">Désolé, le partage n\'est pas disponible sur votre serveur. Veuillez contacter votre administrateur.</string>
-  <string name="share_link_file_error">Une erreur est survenue lors de la tentative de partage de ce fichier ou répertoire</string>
-  <string name="unshare_link_file_error">Une erreur est survenue lors de la tentative d’annulation du partage de ce fichier ou répertoire</string>
-  <string name="update_link_file_error">Une erreur est survenue lors de la mise à jour du partage</string>
   <string name="share_link_password_title">Saisissez un mot de passe</string>
   <string name="share_link_empty_password">Vous devez saisir un mot de passe</string>
   <string name="activity_chooser_send_file_title">Envoyer</string>
@@ -364,7 +357,6 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="clipboard_uxexpected_error">Erreur inattendue lors de la copie vers le presse-papiers</string>
   <string name="clipboard_label">Texte copié depuis %1$s</string>
   <string name="error_cant_bind_to_operations_service">Erreur critique : impossible de réaliser les opérations</string>
-  <string name="network_error_socket_exception">Une erreur est survenue pendant la connexion au serveur.</string>
   <string name="network_error_socket_timeout_exception">Le serveur a pris trop de temps à répondre</string>
   <string name="network_error_connect_timeout_exception">Le serveur a pris trop de temps pour se connecter</string>
   <string name="network_host_not_available">Le serveur n\'a pas pu être joint</string>
