--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -73,6 +73,7 @@
   <string name="passcode_already_set">Non é posíbel activar os bloqueos de patrón e de código de seguridade ao mesmo tempo, primeiro desactive o código de seguridade</string>
   <string name="pattern_no_longer_required">Xa non se pedirá o patrón</string>
   <string name="pattern_configure_your_pattern_explanation">Solicitaráselle o patrón cada vez que inicie a aplicación</string>
+  <string name="pass_code_locked">Bloqueado con código de seguridade</string>
   <string name="pattern_locked">Bloqueado con patrón</string>
   <string name="illegal_argument_exception_message">É necesaria unha ACCIÓN válida na intención pasada a</string>
   <string name="recommend_subject">Tente %1$s no seu teléfono intelixente!</string>
@@ -105,7 +106,8 @@ Descárgueo de aquí: %2$s</string>
   <string name="file_list_seconds_ago">segundos atrás</string>
   <string name="file_list_empty">Aquí non hai nada. Envíe algo!</string>
   <string name="file_list_empty_available_offline">Non hai ficheiros dispoñíbeis sen conexión.</string>
-  <string name="file_list_loading">Cargando…</string>
+  <string name="file_list_empty_shared_by_links">Aínda non hai ficheiros compartidos por ligazón.</string>
+  <string name="file_list_loading">Cargando...</string>
   <string name="file_list_no_app_for_file_type">Non se atopou unha aplicación para este tipo de ficheiro</string>
   <string name="local_file_list_empty">Non hai ficheiros neste cartafol.</string>
   <string name="local_file_list_empty_just_folders">Non hai cartafoles neste cartafol.</string>
@@ -135,9 +137,8 @@ Descárgueo de aquí: %2$s</string>
   <string name="common_back">Atrás</string>
   <string name="common_save_exit">Gardaer e saír.</string>
   <string name="common_error">Erro</string>
-  <string name="common_loading">Cargando…</string>
+  <string name="common_loading">Cargando...</string>
   <string name="common_unknown">descoñecido</string>
-  <string name="common_error_unknown">Produciuse un erro descoñecido</string>
   <string name="common_pending">Pendentes</string>
   <string name="common_important">Importante</string>
   <string name="about_title">Sobre</string>
@@ -222,7 +223,6 @@ Descárgueo de aquí: %2$s</string>
   <string name="pass_code_wrong">Código de seguridade incorrecto</string>
   <string name="pass_code_removed">Retirouse o código de seguridade</string>
   <string name="pass_code_stored">O código de seguridade foi almacenado</string>
-  <string name="pass_code_locked">Bloqueado con código de seguridade</string>
   <string name="fingerprint_confirm">Confirme a súa pegada para continuar</string>
   <string name="fingerprint_hint">Sensor táctil</string>
   <string name="fingerprint_not_recognized">Non se recoñeceu a pegada, ténteo de novo</string>
@@ -250,8 +250,8 @@ Descárgueo de aquí: %2$s</string>
   <string name="media_play_pause_description">Botón de reprodución/pausa</string>
   <string name="media_forward_description">Botón de avance rápido</string>
   <string name="upload_from_camera_title">Imaxe da cámara</string>
-  <string name="auth_getting_authorization">Obtendo a autorización…</string>
-  <string name="auth_trying_to_login">Tentando acceder…</string>
+  <string name="auth_getting_authorization">Obtendo a autorización...</string>
+  <string name="auth_trying_to_login">Tentando acceder...</string>
   <string name="auth_no_net_conn_title">Sen conexión de rede</string>
   <string name="auth_nossl_plain_ok_title">Non hai conexión seguras dispoñíbeis.</string>
   <string name="auth_connection_established">Estabeleceuse a conexión</string>
@@ -288,7 +288,6 @@ Descárgueo de aquí: %2$s</string>
   <string name="confirmation_remove_local">Só local</string>
   <string name="confirmation_remove_account_alert">Confirma que quere eliminar a conta %1$s?</string>
   <string name="confirmation_remove_public_share_title">Retirar a ligazón</string>
-  <string name="confirmation_remove_share_message">Confirma que quere retirar %1$s?</string>
   <string name="remove_success_msg">Retirado correctamente</string>
   <string name="remove_fail_msg">Non foi posíbel retiralo</string>
   <string name="rename_dialog_title">Introducir un novo nome</string>
@@ -359,14 +358,8 @@ Descárgueo de aquí: %2$s</string>
   <string name="preview_image_error_unknown_format">Esta imaxe non pode ser amosada</string>
   <string name="error__upload__local_file_not_copied">Non foi posíbel copiar %1$s no cartafol local %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Ruta de envío de imaxes</string>
-  <string name="get_shares_error">Produciuse un erro ao tentar recuperar comparticións</string>
-  <string name="get_sharees_error">Produciuse un erro ao tentar recuperar usuarios e grupos</string>
-  <string name="get_capabilities_error">Produciuse un erro ao tentar recuperar funcións</string>
   <string name="share_link_no_support_share_api">O seu servidor non ten activada a opción de compartir. Póñase en contacto co
 		administrador.</string>
-  <string name="share_link_file_error">Produciuse un erro ao tentar compartir este ficheiro ou cartafol.</string>
-  <string name="unshare_link_file_error">Produciuse un erro ao tentar deixar de compartir este ficheiro ou cartafol</string>
-  <string name="update_link_file_error">Produciuse un erro ao tentar actualizar o recurso compartido</string>
   <string name="share_link_password_title">Escriba un contrasinal</string>
   <string name="share_link_empty_password">Ten que escribir un contrasinal</string>
   <string name="activity_chooser_send_file_title">Enviar</string>
@@ -376,7 +369,6 @@ Descárgueo de aquí: %2$s</string>
   <string name="clipboard_uxexpected_error">Produciuse un erro non agardado ao copiar no portapapeis</string>
   <string name="clipboard_label">Texto copiado dende %1$s</string>
   <string name="error_cant_bind_to_operations_service">Produciuse un erro crítico: non é posíbel realizar as operacións</string>
-  <string name="network_error_socket_exception">Produciuse un erro mentres conectaba co servidor.</string>
   <string name="network_error_socket_timeout_exception">O servidor tardou de máis en responder</string>
   <string name="network_error_connect_timeout_exception">O servidor tardou de máis en conectar</string>
   <string name="network_host_not_available">Non foi posíbel acadar o servidor</string>
@@ -398,7 +390,7 @@ Descárgueo de aquí: %2$s</string>
   <string name="log_send_history_button">Enviar o historial</string>
   <string name="log_send_no_mail_app">Non se atopou unha aplicación para enviar os rexistros. Instale unha aplicación de correo!</string>
   <string name="log_send_mail_subject">Rexistros da aplicación %1$s Android</string>
-  <string name="log_progress_dialog_text">Cargando os datos…</string>
+  <string name="log_progress_dialog_text">Cargando os datos...</string>
   <string name="actionbar_select_all">Seleccionar todo</string>
   <string name="actionbar_select_inverse">Seleccionar á inversa</string>
   <string name="actionbar_move">Mover</string>
