--- a/owncloudApp/src/main/res/values-he/strings.xml
+++ b/owncloudApp/src/main/res/values-he/strings.xml
@@ -73,6 +73,7 @@
   <string name="passcode_already_set">לא ניתן להפעיל נעילת קוד ותבנית בו זמנית, נא להשבית את הקוד תחילה</string>
   <string name="pattern_no_longer_required">לא תופיע עוד בקשה עם תבנית</string>
   <string name="pattern_configure_your_pattern_explanation">תופיע בקשה לאימות תבנית עם כל הפעלה של היישומון</string>
+  <string name="pass_code_locked">נעילה על בסיס סיסמא</string>
   <string name="pattern_locked">נעילה על בסיס תבנית</string>
   <string name="illegal_argument_exception_message">פעולה חוקית נדרשת להעברה</string>
   <string name="recommend_subject">לבדיקה %1$s בטלפון החכם שלך!</string>
@@ -137,7 +138,6 @@
   <string name="common_error">שגיאה</string>
   <string name="common_loading">בטעינה …</string>
   <string name="common_unknown">לא ידוע</string>
-  <string name="common_error_unknown">שגיאה בלתי ידועה</string>
   <string name="common_pending">ממתין</string>
   <string name="common_important">חשוב</string>
   <string name="about_title">על אודות</string>
@@ -146,7 +146,7 @@
   <string name="create_account">יצירת חשבון</string>
   <string name="upload_chooser_title">העלאה מ-</string>
   <string name="uploader_info_dirname">שם התיקייה</string>
-  <string name="uploader_upload_in_progress_ticker">מעלה…</string>
+  <string name="uploader_upload_in_progress_ticker">מעלה...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% בהעלאה %2$s</string>
   <string name="uploader_upload_succeeded_ticker">ההעלאה הצליחה</string>
   <string name="uploader_upload_succeeded_content_single">%1$s הועלו</string>
@@ -185,7 +185,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">מחכה לחיבור WiFi</string>
   <string name="uploads_view_later_waiting_to_upload">ממתין להעלאה</string>
   <string name="uploads_view_unsupported_media_type">סוג מדיה לא נתמך</string>
-  <string name="downloader_download_in_progress_ticker">מוריד…</string>
+  <string name="downloader_download_in_progress_ticker">מוריד...</string>
   <string name="downloader_download_in_progress_content">%1$d%% בהורדה %2$s</string>
   <string name="downloader_download_succeeded_ticker">ההורדה הצליחה</string>
   <string name="downloader_download_succeeded_content">%1$s הורדו</string>
@@ -222,7 +222,6 @@
   <string name="pass_code_wrong">קוד שגוי</string>
   <string name="pass_code_removed">הקוד הוסר</string>
   <string name="pass_code_stored">הקוד נשמר</string>
-  <string name="pass_code_locked">נעילה על בסיס סיסמא</string>
   <string name="fingerprint_confirm">יש לאשר את טביעת האצבע להמשך</string>
   <string name="fingerprint_hint">גלאי מגע</string>
   <string name="fingerprint_not_recognized">טביעת האצבע לא אומתה, יש לנסות שוב</string>
@@ -250,8 +249,8 @@
   <string name="media_play_pause_description">לחצן ניגון או השהייה</string>
   <string name="media_forward_description">לחצן הרצה קדימה</string>
   <string name="upload_from_camera_title">תמונה ממצלמה</string>
-  <string name="auth_getting_authorization">מקבל אישורים…</string>
-  <string name="auth_trying_to_login">מנסה להתחבר…</string>
+  <string name="auth_getting_authorization">מקבל אישורים...</string>
+  <string name="auth_trying_to_login">מנסה להתחבר...</string>
   <string name="auth_no_net_conn_title">אין חיבור לאינטרנט</string>
   <string name="auth_nossl_plain_ok_title">אין חיבור מוצפן זמין.</string>
   <string name="auth_connection_established">החיבור נוצר</string>
@@ -272,7 +271,7 @@
   <string name="auth_wtf_reenter_URL">מצב בלתי צפוי ; יש להכניס את כתובת השרת שנית</string>
   <string name="auth_expired_oauth_token_toast">האישור שלך פג. נא לבצע אישור מחדש</string>
   <string name="auth_expired_basic_auth_toast">יש להכניס את הסיסמא הנוכחית</string>
-  <string name="auth_connecting_auth_server">מתחבר לשרת אימות…</string>
+  <string name="auth_connecting_auth_server">מתחבר לשרת אימות...</string>
   <string name="auth_unsupported_auth_method">השרת אינו תומך בשיטת אימות זו</string>
   <string name="auth_unsupported_multiaccount">%1$s אינו תומך בריבוי חשבונות</string>
   <string name="auth_fail_get_user_name">השרת אינו מחזיר מספר משתמש נכון, יש ליצור קשר עם מנהל
@@ -288,7 +287,6 @@
   <string name="confirmation_remove_local">מקומי בלבד</string>
   <string name="confirmation_remove_account_alert">האם באמת להסיר את החשבון %1$s?</string>
   <string name="confirmation_remove_public_share_title">הסרת קישור</string>
-  <string name="confirmation_remove_share_message">האם באמת להסיר %1$s?</string>
   <string name="remove_success_msg">ההסרה הצליחה</string>
   <string name="remove_fail_msg">ההסרה נכשלה</string>
   <string name="rename_dialog_title">נא להזין שם חדש</string>
@@ -308,7 +306,7 @@
   <string name="activity_chooser_title">שליחת קישור ל-</string>
   <string name="wait_for_tmp_copy_from_private_storage">מעתיק קובץ מאחסון פרטי</string>
   <string name="oauth_check_onoff">התחברות באמצעות oAuth2</string>
-  <string name="oauth_login_connection">מתחבר לשרת OAuth2…</string>
+  <string name="oauth_login_connection">מתחבר לשרת OAuth2...</string>
   <string name="ssl_validator_header">לא ניתן היה לאמת את זהות השרת</string>
   <string name="ssl_validator_reason_cert_not_trusted">- תעודת השרת אינה מהימנה</string>
   <string name="ssl_validator_reason_cert_expired">- תוקף תעודת השרת פג</string>
@@ -359,14 +357,8 @@
   <string name="preview_image_error_unknown_format">תמונה זו לא ניתנת לצפייה</string>
   <string name="error__upload__local_file_not_copied">%1$s לא ניתן להעתקה לתיקייה מקומית %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">נתיב העלאת תמונות</string>
-  <string name="get_shares_error">שגיאה אירעה בניסיון לאחזר שיתופים</string>
-  <string name="get_sharees_error">שגיאה אירעה בניסיון לאחזר משתמשים וקבוצות</string>
-  <string name="get_capabilities_error">שגיאה אירעה בניסיון לאחזר יכולות</string>
   <string name="share_link_no_support_share_api">מצטערים, שיתוף אינו מורשה על השרת שלך. יש ליצור קשר עם
 ⇥⇥מנהל.</string>
-  <string name="share_link_file_error">שגיאה אירעה בזמן ניסיון לשתף קובץ זה או תיקייה זו</string>
-  <string name="unshare_link_file_error">שגיאה אירעה בזמן ניסיון לבטל שיתוף לקובץ זה או לתיקייה זו</string>
-  <string name="update_link_file_error">שגיאה אירעה בניסיון לעדכן את השיתוף</string>
   <string name="share_link_password_title">הכנסת סיסמא</string>
   <string name="share_link_empty_password">יש להכניס סיסמא</string>
   <string name="activity_chooser_send_file_title">שליחה</string>
@@ -376,7 +368,6 @@
   <string name="clipboard_uxexpected_error">שגיאה לא צפויה בזמן העתקה ללוח הגזירים</string>
   <string name="clipboard_label">טקסט הועתק מ- %1$s</string>
   <string name="error_cant_bind_to_operations_service">שגיאה קריטית: לא ניתן לבצע את הפעולות</string>
-  <string name="network_error_socket_exception">שגיאה אירעה בזמן חיבור לשרת.</string>
   <string name="network_error_socket_timeout_exception">לשרת לקח יותר מדי זמן להגיב</string>
   <string name="network_error_connect_timeout_exception">לשרת לקח זמן רב מדי להתחבר</string>
   <string name="network_host_not_available">לא ניתן לגשת לשרת</string>
@@ -398,7 +389,7 @@
   <string name="log_send_history_button">הסטורית שליחה</string>
   <string name="log_send_no_mail_app">לא נמצא יישום לשליחת לוגים. יש להתקין יישום mail.</string>
   <string name="log_send_mail_subject">%1$s לוגים של יישום אנדרואיד</string>
-  <string name="log_progress_dialog_text">טעינת מידע…</string>
+  <string name="log_progress_dialog_text">טעינת מידע...</string>
   <string name="actionbar_select_all">לבחור הכול</string>
   <string name="actionbar_select_inverse">בחירה הפוכה</string>
   <string name="actionbar_move">העברה</string>
