--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -80,7 +80,7 @@
   <string name="auth_failure_snackbar_action">Cambia account</string>
   <string name="auth_oauth_failure_snackbar_action">Accedi</string>
   <string name="auth_check_server">Controlla il server</string>
-  <string name="auth_host_url">Indirizzo server https://…</string>
+  <string name="auth_host_url">Indirizzo server https://...</string>
   <string name="auth_username">Nome utente</string>
   <string name="auth_password">Password</string>
   <string name="auth_register">Prima volta su %1$s?</string>
@@ -102,7 +102,7 @@
   <string name="file_list_seconds_ago">secondi fa</string>
   <string name="file_list_empty">Non c\'è niente qui. Carica qualcosa!</string>
   <string name="file_list_empty_available_offline">Non ci sono file offline disponibili.</string>
-  <string name="file_list_loading">Caricamento in corso…</string>
+  <string name="file_list_loading">Caricamento in corso...</string>
   <string name="file_list_no_app_for_file_type">Nessuna applicazione trovata per questo tipo di file</string>
   <string name="local_file_list_empty">Non ci sono file in questa cartella.</string>
   <string name="local_file_list_empty_just_folders">Non ci sono cartelle in questa cartella.</string>
@@ -132,9 +132,8 @@
   <string name="common_back">Indietro</string>
   <string name="common_save_exit">Salva ed esci</string>
   <string name="common_error">Errore</string>
-  <string name="common_loading">Caricamento in corso…</string>
+  <string name="common_loading">Caricamento in corso...</string>
   <string name="common_unknown">sconosciuto</string>
-  <string name="common_error_unknown">Errore sconosciuto</string>
   <string name="common_pending">In corso</string>
   <string name="common_important">Importante</string>
   <string name="about_title">Informazioni</string>
@@ -143,7 +142,7 @@
   <string name="create_account">Crea account</string>
   <string name="upload_chooser_title">Invia da</string>
   <string name="uploader_info_dirname">Nome della cartella</string>
-  <string name="uploader_upload_in_progress_ticker">Invio in corso…</string>
+  <string name="uploader_upload_in_progress_ticker">Invio in corso...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Caricamento di %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Caricamento effettuato</string>
   <string name="uploader_upload_succeeded_content_single">%1$s caricato</string>
@@ -182,7 +181,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">In attesa della connettività wifi</string>
   <string name="uploads_view_later_waiting_to_upload">In attesa di caricamento</string>
   <string name="uploads_view_unsupported_media_type">Formato non supportato</string>
-  <string name="downloader_download_in_progress_ticker">Scaricamento…</string>
+  <string name="downloader_download_in_progress_ticker">Scaricamento...</string>
   <string name="downloader_download_in_progress_content">%1$d%% Scaricamento di %2$s</string>
   <string name="downloader_download_succeeded_ticker">Scaricamento effettuato</string>
   <string name="downloader_download_succeeded_content">%1$s scaricato</string>
@@ -246,8 +245,8 @@
   <string name="media_play_pause_description">Pulsante Riproduci o pausa</string>
   <string name="media_forward_description">Pulsante Avanti veloce</string>
   <string name="upload_from_camera_title">Immagine dalla fotocamera</string>
-  <string name="auth_getting_authorization">Autorizzazione in corso…</string>
-  <string name="auth_trying_to_login">Tentativo di accesso…</string>
+  <string name="auth_getting_authorization">Autorizzazione in corso...</string>
+  <string name="auth_trying_to_login">Tentativo di accesso...</string>
   <string name="auth_no_net_conn_title">Nessuna connessione di rete</string>
   <string name="auth_nossl_plain_ok_title">Connessione sicura disponibile.</string>
   <string name="auth_connection_established">Connessione stabilita</string>
@@ -268,7 +267,7 @@
   <string name="auth_wtf_reenter_URL">Stato inatteso; digita nuovamente l\'indirizzo del server</string>
   <string name="auth_expired_oauth_token_toast">Autorizzazione scaduta. Richiedi l\'autorizzazione</string>
   <string name="auth_expired_basic_auth_toast">Digita la password attuale</string>
-    <string name="auth_connecting_auth_server">Connessione al server di autenticazione in corso…</string>
+  <string name="auth_connecting_auth_server">Connessione al server di autenticazione in corso...</string>
   <string name="auth_unsupported_auth_method">Il server non supporta questo metodo di autenticazione</string>
   <string name="auth_unsupported_multiaccount">%1$s non supporta account multipli</string>
   <string name="auth_fail_get_user_name">Il tuo server non ha restituito un id utente corretto, contatta un amministratore
@@ -284,7 +283,6 @@
   <string name="confirmation_remove_local">Solo localmente</string>
   <string name="confirmation_remove_account_alert">Vuoi davvero rimuovere l\'account %1$s?</string>
   <string name="confirmation_remove_public_share_title">Rimuovi collegamento</string>
-  <string name="confirmation_remove_share_message">Vuoi davvero rimuovere %1$s?</string>
   <string name="remove_success_msg">Rimozione effettuata con successo</string>
   <string name="remove_fail_msg">La rimozione non può essere completata</string>
   <string name="rename_dialog_title">Digita un nuovo nome</string>
@@ -304,7 +302,7 @@
   <string name="activity_chooser_title">Invia collegamento a</string>
   <string name="wait_for_tmp_copy_from_private_storage">Copia file dall\'archiviazione privata</string>
   <string name="oauth_check_onoff">Accesso con oAuth2.</string>
-  <string name="oauth_login_connection">Connessione al server OAuth2…</string>
+  <string name="oauth_login_connection">Connessione al server OAuth2...</string>
   <string name="ssl_validator_header">L\'identità del server non può essere verificata</string>
   <string name="ssl_validator_reason_cert_not_trusted">- Il certificato del server non è affidabile</string>
   <string name="ssl_validator_reason_cert_expired">- Il certificato del server è scaduto</string>
@@ -355,12 +353,8 @@
   <string name="preview_image_error_unknown_format">Questa immagine non può essere mostrata</string>
   <string name="error__upload__local_file_not_copied">%1$s non può essere copiato nella cartella locale %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Percorso caricamento immagini</string>
-  <string name="get_shares_error">Si è verificato un errore durante il tentativo di recuperare le condivisioni</string>
   <string name="share_link_no_support_share_api">Spiacenti, la condivisione non è abilitata sul tuo server. Contatta il tuo
 		amministratore.</string>
-  <string name="share_link_file_error">Si è verificato un errore durante il tentativo di condivisione del file o della cartella</string>
-  <string name="unshare_link_file_error">Si è verificato un errore durante il tentativo di rimuovere la condivisione del file o della cartella</string>
-  <string name="update_link_file_error">Si è verificato un errore durante il tentativo di aggiornare la condivisione.</string>
   <string name="share_link_password_title">Digita una password</string>
   <string name="share_link_empty_password">Devi digitare una password</string>
   <string name="activity_chooser_send_file_title">Invia</string>
@@ -370,7 +364,6 @@
   <string name="clipboard_uxexpected_error">Errore inatteso durante la copia negli appunti</string>
   <string name="clipboard_label">Testo copiato da %1$s</string>
   <string name="error_cant_bind_to_operations_service">Errore grave: impossibile eseguire le operazioni</string>
-  <string name="network_error_socket_exception">Si è verificato un errore durante la connessione al server.</string>
   <string name="network_error_socket_timeout_exception">Il server ha richiesto troppo tempo per rispondere</string>
   <string name="network_error_connect_timeout_exception">Il server impiega troppo tempo per connettersi</string>
   <string name="network_host_not_available">Non è possibile contattare il server</string>
@@ -392,10 +385,10 @@
   <string name="log_send_history_button">Cronologia invii</string>
   <string name="log_send_no_mail_app">Non è stata trovata alcuna applicazione per l\'invio dei log. Installa un client di posta.</string>
   <string name="log_send_mail_subject">Registri applicazione %1$s Android</string>
-  <string name="log_progress_dialog_text">Caricamento dati in corso…</string>
+  <string name="log_progress_dialog_text">Caricamento dati in corso...</string>
   <string name="actionbar_select_all">Seleziona tutto</string>
   <string name="actionbar_select_inverse">Seleziona inverso</string>
-    <string name="actionbar_move">Sposta</string>
+  <string name="actionbar_move">Sposta</string>
   <string name="file_list_empty_moving">Qui non c\'è niente. Puoi aggiungere una cartella.</string>
   <string name="folder_picker_choose_button_text">Scegli</string>
   <string name="move_file_not_found">Impossibile spostare. Assicurati che il file esista</string>
