--- a/owncloudApp/src/main/res/values-ko/strings.xml
+++ b/owncloudApp/src/main/res/values-ko/strings.xml
@@ -114,7 +114,6 @@
   <string name="common_error">오류</string>
   <string name="common_loading">불러오는 중…</string>
   <string name="common_unknown">알 수 없음</string>
-  <string name="common_error_unknown">알 수 없는 오류</string>
   <string name="common_pending">대기 중</string>
   <string name="common_important">중요</string>
   <string name="about_title">정보</string>
@@ -155,7 +154,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Wi-Fi 연결을 기다리는 중</string>
   <string name="uploads_view_later_waiting_to_upload">업로드 대기 중</string>
   <string name="uploads_view_unsupported_media_type">지원하지 않는 미디어 형식</string>
-  <string name="downloader_download_in_progress_ticker">다운로드중…</string>
+  <string name="downloader_download_in_progress_ticker">다운로드중...</string>
   <string name="downloader_download_in_progress_content">%1$d%% %2$s 다운로드 중</string>
   <string name="downloader_download_succeeded_ticker">다운로드됨</string>
   <string name="downloader_download_succeeded_content">%1$s 다운로드됨</string>
@@ -216,8 +215,8 @@
   <string name="media_rewind_description">되감기 단추</string>
   <string name="media_play_pause_description">재생 혹은 일시 정지 단추</string>
   <string name="media_forward_description">빨리감기 단추</string>
-  <string name="auth_getting_authorization">인증 정보 가져오는 중…</string>
-  <string name="auth_trying_to_login">로그인 시도중…</string>
+  <string name="auth_getting_authorization">인증 정보 가져오는 중...</string>
+  <string name="auth_trying_to_login">로그인 시도중...</string>
   <string name="auth_no_net_conn_title">네트워크에 연결할 수 없음</string>
   <string name="auth_nossl_plain_ok_title">암호화된 연결을 사용할 수 없습니다.</string>
   <string name="auth_connection_established">연결됨</string>
@@ -238,7 +237,7 @@
   <string name="auth_wtf_reenter_URL">예상하지 못한 상태, 서버 주소를 다시 입력하십시오</string>
   <string name="auth_expired_oauth_token_toast">인증이 만료되었습니다. 다시 인증하십시오</string>
   <string name="auth_expired_basic_auth_toast">현재 암호를 입력하십시오</string>
-    <string name="auth_connecting_auth_server">인증 서버에 연결하는 중…</string>
+  <string name="auth_connecting_auth_server">인증 서버에 연결하는 중…</string>
   <string name="auth_unsupported_auth_method">서버에서 이 인증 방법을 지원하지 않음</string>
   <string name="auth_unsupported_multiaccount">%1$s에서 다중 계정을 지원하지 않습니다</string>
   <string name="auth_fail_get_user_name">서버에서 올바른 사용자 ID를 반환하지 않았습니다. 시스템 관리자에게 연락하십시오
@@ -254,7 +253,6 @@
   <string name="confirmation_remove_local">로컬만</string>
   <string name="confirmation_remove_account_alert">%1$s 계정을 삭제하시겠습니까?</string>
   <string name="confirmation_remove_public_share_title">링크 삭제</string>
-  <string name="confirmation_remove_share_message">%1$s을(를) 삭제하시겠습니까?</string>
   <string name="remove_success_msg">삭제함</string>
   <string name="remove_fail_msg">삭제할 수 없음</string>
   <string name="rename_dialog_title">새 이름 입력</string>
@@ -322,9 +320,6 @@
   <string name="error__upload__local_file_not_copied">%1$s을(를) 로컬 폴더 %2$s(으)로 복사할 수 없습니다</string>
   <string name="prefs_camera_picture_upload_path_title">사진 업로드 경로</string>
   <string name="share_link_no_support_share_api">서버에서 공유가 활성화되지 않았습니다. 시스템 관리자에게 연락하십시오.</string>
-  <string name="share_link_file_error">이 파일이나 폴더를 공유하는 중 오류 발생</string>
-  <string name="unshare_link_file_error">이 파일이나 폴더의 공유를 해제하는 중 오류 발생</string>
-  <string name="update_link_file_error">공유를 업데이트하는 중 오류 발생</string>
   <string name="share_link_password_title">암호 입력</string>
   <string name="share_link_empty_password">암호를 입력해야 합니다</string>
   <string name="activity_chooser_send_file_title">보내기</string>
@@ -334,7 +329,6 @@
   <string name="clipboard_uxexpected_error">클립보드에 복사하는 중 예기치 않은 오류</string>
   <string name="clipboard_label">%1$s에서 텍스트를 복사함</string>
   <string name="error_cant_bind_to_operations_service">치명적 오류: 작업을 수행할 수 없음</string>
-  <string name="network_error_socket_exception">서버에 연결하는 중 오류가 발생했습니다.</string>
   <string name="network_error_socket_timeout_exception">서버 응답 시간이 초과됨</string>
   <string name="network_error_connect_timeout_exception">서버 연결이 너무 오래 지연 되었습니다</string>
   <string name="network_host_not_available">서버에 접근할 수 없습니다</string>
@@ -356,9 +350,9 @@
   <string name="log_send_history_button">기록 보내기</string>
   <string name="log_send_no_mail_app">로그를 보내는 데 사용할 수 있는 앱이 없습니다. 이메일 앱을 설치하십시오.</string>
   <string name="log_send_mail_subject">%1$s Android 앱 로그</string>
-  <string name="log_progress_dialog_text">데이터 불러오는 중…</string>
+  <string name="log_progress_dialog_text">데이터 불러오는 중...</string>
   <string name="actionbar_select_all">모두 선택</string>
-    <string name="actionbar_move">이동</string>
+  <string name="actionbar_move">이동</string>
   <string name="file_list_empty_moving">항목이 없습니다. 폴더를 추가할 수 있습니다!</string>
   <string name="folder_picker_choose_button_text">선택</string>
   <string name="move_file_not_found">이동할 수 없습니다. 파일이 존재하는지 확인하십시오</string>
