--- a/owncloudApp/src/main/res/values-nl/strings.xml
+++ b/owncloudApp/src/main/res/values-nl/strings.xml
@@ -71,6 +71,7 @@
   <string name="passcode_already_set">Patroon- en toegangscodes kunnen niet tegelijkertijd actief zijn, deactiveer eerst de toegangscode</string>
   <string name="pattern_no_longer_required">Het patroon zal niet meer worden gevraagd</string>
   <string name="pattern_configure_your_pattern_explanation">Telkens wanneer de app is gestart zal er om een patroon worden gevraagd</string>
+  <string name="pass_code_locked">Vergrendeld met wachtwoord</string>
   <string name="pattern_locked">Vergrendeld met patroon</string>
   <string name="recommend_subject">Probeer %1$s op uw smartphone!</string>
   <string name="recommend_text">Uitnodiging om %1$s op uw smartphone uit te proberen!
@@ -102,7 +103,7 @@ Download hier: %2$s</string>
   <string name="file_list_seconds_ago">seconden geleden</string>
   <string name="file_list_empty">Er bevindt zich hier niets. Upload een bestand!</string>
   <string name="file_list_empty_available_offline">Er zijn geen offline bestanden beschikbaar</string>
-  <string name="file_list_loading">Laden…</string>
+  <string name="file_list_loading">Laden...</string>
   <string name="file_list_no_app_for_file_type">Geen app gevonden voor het bestandsformaat</string>
   <string name="local_file_list_empty">Er staan geen bestanden in deze map.</string>
   <string name="local_file_list_empty_just_folders">Er zitten geen mappen in deze map.</string>
@@ -132,9 +133,8 @@ Download hier: %2$s</string>
   <string name="common_back">Terug</string>
   <string name="common_save_exit">Opslaan &amp; einde</string>
   <string name="common_error">Fout</string>
-  <string name="common_loading">Laden…</string>
+  <string name="common_loading">Laden...</string>
   <string name="common_unknown">onbekend</string>
-  <string name="common_error_unknown">Onbekende fout</string>
   <string name="common_pending">In behandeling</string>
   <string name="common_important">Belangrijk</string>
   <string name="about_title">Over</string>
@@ -143,7 +143,7 @@ Download hier: %2$s</string>
   <string name="create_account">Maak account aan</string>
   <string name="upload_chooser_title">Upload vanaf</string>
   <string name="uploader_info_dirname">Mapnaam</string>
-  <string name="uploader_upload_in_progress_ticker">uploaden…</string>
+  <string name="uploader_upload_in_progress_ticker">uploaden...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Uploaden %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Upload succesvol</string>
   <string name="uploader_upload_succeeded_content_single">%1$s geüpload</string>
@@ -220,7 +220,6 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="pass_code_wrong">Onjuiste pincode</string>
   <string name="pass_code_removed">Pincode verwijderd</string>
   <string name="pass_code_stored">Pincode opgeslagen</string>
-  <string name="pass_code_locked">Vergrendeld met wachtwoord</string>
   <string name="fingerprint_confirm">Bevestig uw vingerafdruk om door te gaan</string>
   <string name="fingerprint_hint">Touch sensor</string>
   <string name="fingerprint_not_recognized">Vingerafdruk niet herkend, probeer opnieuw</string>
@@ -248,8 +247,8 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="media_play_pause_description">Speel of pauze knop</string>
   <string name="media_forward_description">Doorspoel knop</string>
   <string name="upload_from_camera_title">Afbeelding vanaf de camera</string>
-  <string name="auth_getting_authorization">Ophalen autorisaties…</string>
-  <string name="auth_trying_to_login">Proberen in te loggen…</string>
+  <string name="auth_getting_authorization">Ophalen autorisaties...</string>
+  <string name="auth_trying_to_login">Proberen in te loggen...</string>
   <string name="auth_no_net_conn_title">Geen netwerkverbinding</string>
   <string name="auth_nossl_plain_ok_title">Veilige verbinding niet beschikbaar.</string>
   <string name="auth_connection_established">Verbinding tot stand gebracht</string>
@@ -270,7 +269,7 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="auth_wtf_reenter_URL">Onverwachte toestand; voer a.u.b. nogmaals de server-URL in</string>
   <string name="auth_expired_oauth_token_toast">Uw autorisatie is verstreken. Autoriseer opnieuw.</string>
   <string name="auth_expired_basic_auth_toast">Voer uw huidige wachtwoord in</string>
-    <string name="auth_connecting_auth_server">Verbinden met authenticatieserver…</string>
+  <string name="auth_connecting_auth_server">Verbinden met authenticatieserver...</string>
   <string name="auth_unsupported_auth_method">De server ondersteunt deze authenticatiemethode niet</string>
   <string name="auth_unsupported_multiaccount">%1$s ondersteunt het gebruik van meerdere accounts niet</string>
   <string name="auth_fail_get_user_name">Uw server geeft geen goede userid terug, neem contact op met uw beheerder
@@ -286,7 +285,6 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="confirmation_remove_local">Alleen lokaal</string>
   <string name="confirmation_remove_account_alert">Wilt u werkelijk account %1$s verwijderen?</string>
   <string name="confirmation_remove_public_share_title">Verwijderen link</string>
-  <string name="confirmation_remove_share_message">Wilt u %1$s werkelijk verwijderen?</string>
   <string name="remove_success_msg">Succesvol verwijderd</string>
   <string name="remove_fail_msg">Verwijdering kon niet voltooid worden</string>
   <string name="rename_dialog_title">Voer een nieuwe naam in</string>
@@ -357,13 +355,8 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="preview_image_error_unknown_format">Deze afbeelding kan niet worden getoond</string>
   <string name="error__upload__local_file_not_copied">%1$s kon niet worden gekopieerd naar de %2$s lokale map</string>
   <string name="prefs_camera_picture_upload_path_title">Afbeelding upload bestemming</string>
-  <string name="get_shares_error">Een probleem is ontstaan tijdens het ophalen van shares</string>
-  <string name="get_sharees_error">Een probleem is ontstaan tijdens het ophalen van gebruikers en groepen</string>
   <string name="share_link_no_support_share_api">Sorry, delen is niet mogelijk op uw server. Neem contact op met uw
 		beheerder.</string>
-  <string name="share_link_file_error">Er trad een fout op bij uw poging dit bestand of deze map te delen</string>
-  <string name="unshare_link_file_error">Er trad een fout op bij uw poging het delen van dit bestand of deze map te beëindigen</string>
-  <string name="update_link_file_error">Er trad een fout op bij uw poging de share bij te werken</string>
   <string name="share_link_password_title">Vul het wachtwoord in</string>
   <string name="share_link_empty_password">U moet een wachtwoord opgeven</string>
   <string name="activity_chooser_send_file_title">Versturen</string>
@@ -373,7 +366,6 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="clipboard_uxexpected_error">Onverwachte fout bij het kopiëren naar het klembord</string>
   <string name="clipboard_label">Tekst gekopieerd vanaf %1$s</string>
   <string name="error_cant_bind_to_operations_service">Kritieke fout: kan de acties niet uitvoeren</string>
-  <string name="network_error_socket_exception">Er trad een fout op bij het verbinden met de server.</string>
   <string name="network_error_socket_timeout_exception">De server had te lang nodig om te reageren</string>
   <string name="network_error_connect_timeout_exception">De server had te lang nodig om te verbinden</string>
   <string name="network_host_not_available">Server kon niet worden bereikt</string>
@@ -395,7 +387,7 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="log_send_history_button">Verstuur geschiedenis</string>
   <string name="log_send_no_mail_app">Geen applicatie gevonden voor het versturen van de logs. Installeer een mail applicatie.</string>
   <string name="log_send_mail_subject">%1$s Android app logs</string>
-  <string name="log_progress_dialog_text">Laden data…</string>
+  <string name="log_progress_dialog_text">Laden data...</string>
   <string name="actionbar_select_all">Alles selecteren</string>
   <string name="actionbar_select_inverse">Selecteer omgekeerd</string>
   <string name="actionbar_move">Verplaatsen</string>
