--- a/owncloudApp/src/main/res/values-ru/strings.xml
+++ b/owncloudApp/src/main/res/values-ru/strings.xml
@@ -73,6 +73,7 @@
   <string name="passcode_already_set">Графический ключ и код не могут быть включены одновременно, пожалуйста, отключите сперва код</string>
   <string name="pattern_no_longer_required">Графический ключ не будет больше запрашиваться</string>
   <string name="pattern_configure_your_pattern_explanation">Графический ключ будет запрашиваться каждый раз при запуске приложения</string>
+  <string name="pass_code_locked">Заблокировано кодом</string>
   <string name="pattern_locked">Заблокировано графическим ключом</string>
   <string name="illegal_argument_exception_message">Допустимое ДЕЙСТВИЕ требуется для передачи в намерениях</string>
   <string name="recommend_subject">Попробуйте %1$s на вашем смартфоне!</string>
@@ -83,7 +84,7 @@
   <string name="auth_oauth_failure">Токен доступа устарел или стал недопустимым. Перевойдите, чтобы восстановить доступ</string>
   <string name="auth_oauth_failure_snackbar_action">Войти</string>
   <string name="auth_check_server">Проверить сервер</string>
-  <string name="auth_host_url">Адрес сервера https://…</string>
+  <string name="auth_host_url">Адрес сервера https://...</string>
   <string name="auth_username">Имя пользователя</string>
   <string name="auth_password">Пароль</string>
   <string name="auth_register">Незнакомы с %1$s?</string>
@@ -106,7 +107,7 @@
   <string name="file_list_empty">Здесь ничего нет. Загрузите что-нибудь!</string>
   <string name="file_list_empty_available_offline">Нет доступных автономных файлов.</string>
   <string name="file_list_empty_shared_by_links">Отсутствуют файлы общего доступа по ссылке</string>
-  <string name="file_list_loading">Загрузка…</string>
+  <string name="file_list_loading">Загрузка...</string>
   <string name="file_list_no_app_for_file_type">Не найдено приложение для типа файла</string>
   <string name="local_file_list_empty">В этом каталоге нет файлов.</string>
   <string name="local_file_list_empty_just_folders">В этом каталоге нет каталогов.</string>
@@ -136,9 +137,8 @@
   <string name="common_back">Назад</string>
   <string name="common_save_exit">Сохранить и выйти</string>
   <string name="common_error">Ошибка</string>
-  <string name="common_loading">Загрузка…</string>
+  <string name="common_loading">Загрузка...</string>
   <string name="common_unknown">неизвестно</string>
-  <string name="common_error_unknown">Неизвестная ошибка</string>
   <string name="common_pending">Ожидается</string>
   <string name="common_important">Важный</string>
   <string name="about_title">О программе</string>
@@ -223,7 +223,6 @@
   <string name="pass_code_wrong">Некоррентный код</string>
   <string name="pass_code_removed">Код удален</string>
   <string name="pass_code_stored">Код сохранен</string>
-  <string name="pass_code_locked">Заблокировано кодом</string>
   <string name="fingerprint_confirm">Для продолжения подтвердите свой отпечаток пальца</string>
   <string name="fingerprint_hint">Датчик прикосновения</string>
   <string name="fingerprint_not_recognized">Отпечаток пальца не распознан, попробуйте ещё раз</string>
@@ -251,7 +250,7 @@
   <string name="media_play_pause_description">Воспроизведение или пауза</string>
   <string name="media_forward_description">Перемотка вперед</string>
   <string name="upload_from_camera_title">Изображение из камеры</string>
-  <string name="auth_getting_authorization">Выполняется авторизация…</string>
+  <string name="auth_getting_authorization">Выполняется авторизация...</string>
   <string name="auth_trying_to_login">Пробую войти…</string>
   <string name="auth_no_net_conn_title">Нет подключения к сети</string>
   <string name="auth_nossl_plain_ok_title">Защищённое соединение недоступно.</string>
@@ -273,7 +272,7 @@
   <string name="auth_wtf_reenter_URL">Неожиданное состояние; пожалуйста укажите адрес сервера повторно</string>
   <string name="auth_expired_oauth_token_toast">Время авторизации истекло. Пожалуйста, авторизуйтесь снова</string>
   <string name="auth_expired_basic_auth_toast">Пожалуйста укажите текущий пароль</string>
-    <string name="auth_connecting_auth_server">Подключение к серверу авторизации …</string>
+  <string name="auth_connecting_auth_server">Подключение к серверу авторизации ...</string>
   <string name="auth_unsupported_auth_method">Сервер не поддерживает выбранный метод аутентификации</string>
   <string name="auth_unsupported_multiaccount">%1$s не поддерживает несколько учётных записей</string>
   <string name="auth_fail_get_user_name">Сервер вернул некорректный пользовательский идентификатор. Пожалуйста, свяжитесь с вашим администратором
@@ -289,7 +288,6 @@
   <string name="confirmation_remove_local">Только локально</string>
   <string name="confirmation_remove_account_alert">Вы действительно хотите удалить аккаунт %1$s?</string>
   <string name="confirmation_remove_public_share_title">Удалить ссылку</string>
-  <string name="confirmation_remove_share_message">Вы действительно хотите удалить %1$s?</string>
   <string name="remove_success_msg">Удаление завершено</string>
   <string name="remove_fail_msg">Ошибка удаления</string>
   <string name="rename_dialog_title">Введите новое имя</string>
@@ -309,7 +307,7 @@
   <string name="activity_chooser_title">Отправка ссылки пользователю</string>
   <string name="wait_for_tmp_copy_from_private_storage">Копирование файла из частной хранилища</string>
   <string name="oauth_check_onoff">Войти через oAuth2</string>
-  <string name="oauth_login_connection">Подключение к oAuth2 серверу…</string>
+  <string name="oauth_login_connection">Подключение к oAuth2 серверу...</string>
   <string name="ssl_validator_header">Не удалось проверить подлинность сервера</string>
   <string name="ssl_validator_reason_cert_not_trusted">- Сертификат сервера не является доверенным</string>
   <string name="ssl_validator_reason_cert_expired">- Срок действия сертификата сервера истёк</string>
@@ -360,14 +358,8 @@
   <string name="preview_image_error_unknown_format">Это изображение не может быть отображено</string>
   <string name="error__upload__local_file_not_copied">%1$s невозможно скопировать в локальный каталог %2$s </string>
   <string name="prefs_camera_picture_upload_path_title">Путь загрузки изображений</string>
-  <string name="get_shares_error">Произошла ошибка при попытке получить записи общего доступа</string>
-  <string name="get_sharees_error">Произошла ошибка при попытке получить пользователей и группы</string>
-  <string name="get_capabilities_error">Произошла ошибка при попытке получить возможности</string>
   <string name="share_link_no_support_share_api">Механизм общего доступа не включен на данном сервере. Пожалуйста, свяжитесь с вашим
 ⇥⇥администратором.</string>
-  <string name="share_link_file_error">При попытке поделиться этим файлом или каталогом произошла ошибка</string>
-  <string name="unshare_link_file_error">При попытке закрыть доступ к этому файлу или каталогу произошла ошибка</string>
-  <string name="update_link_file_error">Произошла ошибка во время обновления ссылки доступа</string>
   <string name="share_link_password_title">Введите пароль</string>
   <string name="share_link_empty_password">Вы должны ввести пароль</string>
   <string name="activity_chooser_send_file_title">Отправить</string>
@@ -377,7 +369,6 @@
   <string name="clipboard_uxexpected_error">Неожиданная ошибка во время копирования в буфер обмена</string>
   <string name="clipboard_label">Текст скопирован из %1$s</string>
   <string name="error_cant_bind_to_operations_service">Критическая ошибка: невозможно выполнить действия</string>
-  <string name="network_error_socket_exception">При подключении к серверу возникла ошибка</string>
   <string name="network_error_socket_timeout_exception">Сервер слишком долго не отвечает</string>
   <string name="network_error_connect_timeout_exception">Слишком много времени ушло на подключение к серверу</string>
   <string name="network_host_not_available">Сервер не доступен по сети</string>
@@ -402,7 +393,7 @@
   <string name="log_progress_dialog_text">Загрузка данных…</string>
   <string name="actionbar_select_all">Выделить все</string>
   <string name="actionbar_select_inverse">Выбрать наоборот</string>
-    <string name="actionbar_move">Переместить</string>
+  <string name="actionbar_move">Переместить</string>
   <string name="file_list_empty_moving">Здесь ничего нет. Вы можете создать каталог!</string>
   <string name="folder_picker_choose_button_text">Выбрать</string>
   <string name="move_file_not_found">Невозможно переместить. Убедитесь, что файл существует</string>
