--- a/owncloudApp/src/main/res/values-sv/strings.xml
+++ b/owncloudApp/src/main/res/values-sv/strings.xml
@@ -46,7 +46,7 @@
   <string name="recommend_text">Jag skullje vilja bjuda in dig till att prova %1$s på din smartphone!\nLadda ner appen från Google Play här: %2$s</string>
   <string name="auth_oauth_failure_snackbar_action">Logga in</string>
   <string name="auth_check_server">Testa servern</string>
-  <string name="auth_host_url">Serveradress https://…</string>
+  <string name="auth_host_url">Serveradress https://...</string>
   <string name="auth_username">Användarnamn</string>
   <string name="auth_password">Lösenord</string>
   <string name="auth_register">Ny på %1$s?</string>
@@ -67,7 +67,7 @@
   <string name="uploader_error_message_source_file_not_copied">Ett fel uppstod när filen kopierades till en temporär mapp. Vänligen försök skicka den igen.</string>
   <string name="file_list_seconds_ago">sekunder sedan</string>
   <string name="file_list_empty">Ingenting här. Ladda upp något!</string>
-  <string name="file_list_loading">Laddar…</string>
+  <string name="file_list_loading">Laddar...</string>
   <string name="file_list_no_app_for_file_type">Ingen app hittades för filtypen</string>
   <string name="local_file_list_empty">Det finns inga filer i den här mappen.</string>
   <string name="local_file_list_empty_just_folders">Det finns inga mappar i den här mappen.</string>
@@ -94,9 +94,8 @@
   <string name="common_back">Tillbaka</string>
   <string name="common_save_exit">Spara &amp; avsluta</string>
   <string name="common_error">Fel</string>
-  <string name="common_loading">Laddar…</string>
+  <string name="common_loading">Laddar...</string>
   <string name="common_unknown">okänt</string>
-  <string name="common_error_unknown">Okänt fel</string>
   <string name="common_pending">Väntar</string>
   <string name="common_important">Viktigt</string>
   <string name="about_title">Om</string>
@@ -192,7 +191,7 @@
   <string name="media_rewind_description">Bakåtspolningsknapp</string>
   <string name="media_play_pause_description">Spela- / Pausknapp</string>
   <string name="media_forward_description">Snappspolningsknapp</string>
-  <string name="auth_getting_authorization">Får tillstånd…</string>
+  <string name="auth_getting_authorization">Får tillstånd...</string>
   <string name="auth_no_net_conn_title">Ingen nätverksanslutning</string>
   <string name="auth_nossl_plain_ok_title">Säker anslutning inte tillgänglig.</string>
   <string name="auth_connection_established">Anslutning etablerad</string>
@@ -213,7 +212,7 @@
   <string name="auth_wtf_reenter_URL">Oväntat tillstånd; var god ange serverns adress igen</string>
   <string name="auth_expired_oauth_token_toast">Din inloggning har gått ut. Var god logga in igen</string>
   <string name="auth_expired_basic_auth_toast">Var god ange ditt nuvarande lösenord</string>
-  <string name="auth_connecting_auth_server">Ansluter till autentiseringsserver …</string>
+  <string name="auth_connecting_auth_server">Ansluter till autentiseringsserver ...</string>
   <string name="auth_unsupported_auth_method">Servern har inte stöd för denna autentiseringsmetod</string>
   <string name="auth_unsupported_multiaccount">%1$s har inte stöd för multipla konton</string>
   <string name="auth_fail_get_user_name">Din server returnerar inte ett korrekt användare id, vänligen kontakta en administratör
@@ -229,7 +228,6 @@
   <string name="confirmation_remove_local">Endast lokalt</string>
   <string name="confirmation_remove_account_alert">Vll du verkligen ta bort kontot %1$s?</string>
   <string name="confirmation_remove_public_share_title">Ta bort länk</string>
-  <string name="confirmation_remove_share_message">Vill du verkligen ta bort %1$s?</string>
   <string name="remove_success_msg">Lyckad radering</string>
   <string name="remove_fail_msg">Radering kunde inte slutföras</string>
   <string name="rename_dialog_title">Ange ett nytt namn</string>
@@ -248,7 +246,7 @@
   <string name="filedisplay_no_file_selected">Ingen fil vald</string>
   <string name="wait_for_tmp_copy_from_private_storage">Kopierar fil från privat lagring</string>
   <string name="oauth_check_onoff">Logga in med oAuth2.</string>
-  <string name="oauth_login_connection">Ansluter till OAuth2 autentiseringsservern…</string>
+  <string name="oauth_login_connection">Ansluter till OAuth2 autentiseringsservern...</string>
   <string name="ssl_validator_header">Identiteten av servern kunde inte verifieras</string>
   <string name="ssl_validator_reason_cert_not_trusted">- Servercertifikatet är inte tillförlitligt</string>
   <string name="ssl_validator_reason_cert_expired">- Servercertifikatet har gått ut</string>
@@ -294,9 +292,6 @@
   <string name="error__upload__local_file_not_copied">%1$s kunde inte kopieras till %2$s lokal mapp</string>
   <string name="share_link_no_support_share_api">Ledsen, delning är inte aktiverat på din server. Vänligen kontakta din
 		administratör.</string>
-  <string name="share_link_file_error">Ett fel uppstod vid försök att dela denna fil eller mapp</string>
-  <string name="unshare_link_file_error">Ett fel uppstod vid försök att sluta dela denna fil eller mapp</string>
-  <string name="update_link_file_error">Ett fel inträffade när delningen skulle uppdateras</string>
   <string name="share_link_password_title">Ange ett lösenord</string>
   <string name="share_link_empty_password">Du måste ange ett lösenord</string>
   <string name="activity_chooser_send_file_title">Skicka</string>
@@ -306,7 +301,6 @@
   <string name="clipboard_uxexpected_error">Oväntat fel vid kopiering till utklipp</string>
   <string name="clipboard_label">Text kopierad från %1$s</string>
   <string name="error_cant_bind_to_operations_service">Kritiskt fel: kan inte utföra åtgärden</string>
-  <string name="network_error_socket_exception">Ett fel uppstod vid anslutning till servern.</string>
   <string name="network_error_socket_timeout_exception">Servern svarar inte</string>
   <string name="network_error_connect_timeout_exception">Anslutningstiden till servern överskreds</string>
   <string name="network_host_not_available">Kunde inte nå servern</string>
@@ -328,7 +322,7 @@
   <string name="log_send_history_button">Historik skickat</string>
   <string name="log_send_no_mail_app">Kunde inte hitta program för att skicka loggar. Installera ett e-postprogram</string>
   <string name="log_send_mail_subject">%1$s Android app logs</string>
-  <string name="log_progress_dialog_text">Laddar data…</string>
+  <string name="log_progress_dialog_text">Laddar data...</string>
   <string name="actionbar_select_all">Välj allt</string>
   <string name="actionbar_move">Flytta</string>
   <string name="file_list_empty_moving">Ingenting här. Du kan skapa en mapp!</string>
