--- a/owncloudApp/src/main/res/values-th-rTH/strings.xml
+++ b/owncloudApp/src/main/res/values-th-rTH/strings.xml
@@ -73,6 +73,7 @@
   <string name="passcode_already_set">คุณไม่สามารถเปิดใช้งานการเข้ารหัสรูปแบบและรหัสผ่านได้ในเวลาเดียวกัน โปรดปิดใช้งานรหัสผ่านก่อน</string>
   <string name="pattern_no_longer_required">จะไม่ถามเรื่องรูปแบบอีกต่อไป</string>
   <string name="pattern_configure_your_pattern_explanation">ร้องขอรูปแบบทุกครั้งที่มีการเริ่มต้นแอป</string>
+  <string name="pass_code_locked">ล็อคด้วยรหัสผ่าน</string>
   <string name="pattern_locked">ล็อคด้วยรูปแบบ</string>
   <string name="illegal_argument_exception_message">ต้องใช้การกระทำที่ถูกต้องเพื่อ</string>
   <string name="recommend_subject">ลองใช้ %1$s บนสมาร์ทโฟนของคุณ!</string>
@@ -105,7 +106,7 @@
   <string name="file_list_empty">ยังไม่มีไฟล์ใดๆเลยลองอัปโหลดดูสิ!</string>
   <string name="file_list_empty_available_offline">ยังไม่มีไฟล์ออฟไลน์ที่พร้อมใช้งาน</string>
   <string name="file_list_empty_shared_by_links">ไม่มีการแชร์ไฟล์แบบลิงก์</string>
-  <string name="file_list_loading">กำลังโหลด…</string>
+  <string name="file_list_loading">กำลังโหลด...</string>
   <string name="file_list_no_app_for_file_type">ไม่พบแอปฯที่ตรงกับประเภทของไฟล์</string>
   <string name="local_file_list_empty">ยังไม่มีไฟล์ในโฟลเดอร์นี้</string>
   <string name="local_file_list_empty_just_folders">ไม่มีโฟลเดอร์ในโฟลเดอร์นี้</string>
@@ -135,9 +136,8 @@
   <string name="common_back">ย้อนกลับ</string>
   <string name="common_save_exit">บันทึก &amp; ออก</string>
   <string name="common_error">ข้อผิดพลาด</string>
-  <string name="common_loading">กำลังโหลด…</string>
+  <string name="common_loading">กำลังโหลด...</string>
   <string name="common_unknown">ไม่รู้จัก</string>
-  <string name="common_error_unknown">ข้อผิดพลาดที่ไม่ทราบสาเหตุ</string>
   <string name="common_pending">อยู่ระหว่างดำเนินการ</string>
   <string name="common_important">สำคัญ</string>
   <string name="about_title">เกี่ยวกับเรา</string>
@@ -185,7 +185,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">กำลังรอการเชื่อมต่อ WiFi</string>
   <string name="uploads_view_later_waiting_to_upload">กำลังรออัปโหลด</string>
   <string name="uploads_view_unsupported_media_type">ประเภทของสื่อไม่ได้รับการสนับสนุน</string>
-  <string name="downloader_download_in_progress_ticker">กำลังดาวน์โหลด…</string>
+  <string name="downloader_download_in_progress_ticker">กำลังดาวน์โหลด...</string>
   <string name="downloader_download_in_progress_content">%1$d%% กำลังดาวน์โหลด %2$s</string>
   <string name="downloader_download_succeeded_ticker">ดาวน์โหลดเสร็จสิ้น</string>
   <string name="downloader_download_succeeded_content">ดาวน์โหลด %1$s แล้ว</string>
@@ -222,7 +222,6 @@
   <string name="pass_code_wrong">รหัสยืนยันไม่ถูกต้อง</string>
   <string name="pass_code_removed">ลบรหัสยืนยัน</string>
   <string name="pass_code_stored">รหัสยืนยันที่เก็บไว้</string>
-  <string name="pass_code_locked">ล็อคด้วยรหัสผ่าน</string>
   <string name="fingerprint_confirm">ยืนยันลายนิ้วมือของคุณเพื่อดำเนินการต่อ</string>
   <string name="fingerprint_hint">เซ็นเซอร์ระบบสัมผัส</string>
   <string name="fingerprint_not_recognized">ไม่รู้จักลายนิ้วมือนี้ โปรดลองอีกครั้ง</string>
@@ -250,8 +249,8 @@
   <string name="media_play_pause_description">เล่นหรือกดปุ่มหยุดชั่วคราว</string>
   <string name="media_forward_description">ปุ่มเลื่อนไปข้างหน้า</string>
   <string name="upload_from_camera_title">รูปภาพจากกล้อง</string>
-  <string name="auth_getting_authorization">กำลังขออนุมัติ…</string>
-  <string name="auth_trying_to_login">กำลังเข้าสู่ระบบ…</string>
+  <string name="auth_getting_authorization">กำลังขออนุมัติ...</string>
+  <string name="auth_trying_to_login">กำลังเข้าสู่ระบบ...</string>
   <string name="auth_no_net_conn_title">ไม่มีการเชื่อมต่อเครือข่ายใดๆ</string>
   <string name="auth_nossl_plain_ok_title">การเชื่อมต่อแบบปลอดภัยไม่สามารถใช้งานได้</string>
   <string name="auth_connection_established">ติดตั้งการเชื่อมต่อแล้ว</string>
@@ -287,7 +286,6 @@
   <string name="confirmation_remove_local">เฉพาะในเครื่องเท่านั้น</string>
   <string name="confirmation_remove_account_alert">คุณต้องการลบบัญชี %1$s?</string>
   <string name="confirmation_remove_public_share_title">ลบลิงก์</string>
-  <string name="confirmation_remove_share_message">คุณต้องการลบ %1$s?</string>
   <string name="remove_success_msg">ลบเรียบร้อยแล้ว</string>
   <string name="remove_fail_msg">ไม่สามารถลบได้</string>
   <string name="rename_dialog_title">กรอกชื่อใหม่</string>
@@ -307,7 +305,7 @@
   <string name="activity_chooser_title">ส่งลิงก์ไปที่</string>
   <string name="wait_for_tmp_copy_from_private_storage">คัดลอกไฟล์จากพื้นที่จัดเก็บส่วนตัว</string>
   <string name="oauth_check_onoff">เข้าสู่ระบบด้วย oAuth2</string>
-  <string name="oauth_login_connection">กำลังเชื่อมต่อกับเซิร์ฟเวอร์ OAuth2 …</string>
+  <string name="oauth_login_connection">กำลังเชื่อมต่อกับเซิร์ฟเวอร์ OAuth2 ...</string>
   <string name="ssl_validator_header">ไม่สามารถตรวจสอบตัวตนของเซิร์ฟเวอร์</string>
   <string name="ssl_validator_reason_cert_not_trusted">- ใบรับรองความปลอดภัยของเซิร์ฟเวอร์ไม่น่าเชื่อถือ</string>
   <string name="ssl_validator_reason_cert_expired">- ใบรับรองความปลอดภัยของเซิร์ฟเวอร์หมดอายุแล้ว</string>
@@ -358,13 +356,7 @@
   <string name="preview_image_error_unknown_format">ไม่สามารถแสดงรูปภาพนี้ได้</string>
   <string name="error__upload__local_file_not_copied">%1$s ไม่สามารถคัดลอกไปยังโฟลเดอร์ %2$s ในเครื่อง</string>
   <string name="prefs_camera_picture_upload_path_title">เส้นทางการอัปโหลดรูปภาพ</string>
-  <string name="get_shares_error">เกิดข้อผิดพลาดขณะพยายามเรียกคืนการแชร์</string>
-  <string name="get_sharees_error">เกิดข้อผิดพลาดขณะพยายามดึงผู้ใช้และกลุ่ม</string>
-  <string name="get_capabilities_error">เกิดข้อผิดพลาดขณะพยายามเร่งขีดความสามารถ</string>
   <string name="share_link_no_support_share_api">ขออภัยการแชร์ไม่ได้เปิดใช้งานบนเซิร์ฟเวอร์ของคุณ กรุณาติดต่อผู้ดูแลระบบ</string>
-  <string name="share_link_file_error">เกิดข้อผิดพลาดในขณะที่พยายามจะแชร์ไฟล์หรือโฟลเดอร์นี้</string>
-  <string name="unshare_link_file_error">เกิดข้อผิดพลาดในขณะยกเลิกการอชร์ไฟล์หรือโฟลเดอร์นี้</string>
-  <string name="update_link_file_error">เกิดข้อผิดพลาดในขณะที่พยายามอัปเดตการแชร์</string>
   <string name="share_link_password_title">ป้อนรหัสผ่าน</string>
   <string name="share_link_empty_password">คุณจะต้องใส่รหัสผ่าน</string>
   <string name="activity_chooser_send_file_title">ส่ง</string>
@@ -374,7 +366,6 @@
   <string name="clipboard_uxexpected_error">เกิดข้อผิดพลาดขณะกำลังคัดลอกไปยังคลิปบอร์ด</string>
   <string name="clipboard_label">คัดลอกข้อความจาก %1$s แล้ว</string>
   <string name="error_cant_bind_to_operations_service">ข้อผิดพลาด: ไม่สามารถดำเนินการได้</string>
-  <string name="network_error_socket_exception">เกิดข้อผิดพลาดขณะกำลังเชื่อมต่อกับเซิร์ฟเวอร์</string>
   <string name="network_error_socket_timeout_exception">เซิร์ฟเวอร์ดังกล่าวใช้เวลาตอบสนองนานเกินไป</string>
   <string name="network_error_connect_timeout_exception">เซิร์ฟเวอร์ใช้เวลาเชื่อมต่อนานมาก</string>
   <string name="network_host_not_available">ไม่สามารถเข้าถึงเซิร์ฟเวอร์</string>
@@ -396,7 +387,7 @@
   <string name="log_send_history_button">ส่งประวัติการใช้งานย้อนหลัง</string>
   <string name="log_send_no_mail_app">ไม่พบแอปสำหรับส่งข้อมูล log กรุณาติดตั้งแอปสำหรับส่งเมล</string>
   <string name="log_send_mail_subject">%1$s ข้อมูล log สำหรับแอปแอนดรอยด์</string>
-  <string name="log_progress_dialog_text">กำลังโหลดข้อมูล …</string>
+  <string name="log_progress_dialog_text">กำลังโหลดข้อมูล ...</string>
   <string name="actionbar_select_all">เลือกทั้งหมด</string>
   <string name="actionbar_select_inverse">เลือกตรงกันข้าม</string>
   <string name="actionbar_move">ย้าย</string>
